--- a/articles/rfi/999961.md
+++ b/articles/rfi/999961.md
@@ -1,5 +1,5 @@
-<!--1713532505000-->
-[尼日利亚成为世界上第一个抗脑膜炎新疫苗Men5CV疫苗的国家 - 健康时间](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E5%81%A5%E5%BA%B7%E6%97%B6%E9%97%B4/20240418-%E5%B0%BC%E6%97%A5%E5%88%A9%E4%BA%9A%E6%88%90%E4%B8%BA%E4%B8%96%E7%95%8C%E4%B8%8A%E7%AC%AC%E4%B8%80%E4%B8%AA%E6%8A%97%E8%84%91%E8%86%9C%E7%82%8E%E6%96%B0%E7%96%AB%E8%8B%97men5cv%E7%96%AB%E8%8B%97%E7%9A%84%E5%9B%BD%E5%AE%B6)
+<!--1713545105000-->
+[副首相：英面临来自中、伊、俄、朝等敌对国家的诸多威胁](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E5%89%AF%E9%A6%96%E7%9B%B8-%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD-%E4%BC%8A-%E4%BF%84-%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81)
 ------
 
-<div>18/04/2024 - 23:26</div><img src="https://s.rfi.fr/media/display/63f9ea44-7000-11ed-a917-005056bfb2b6/w:1280/p:16x9/pexels-chokniti-khongchum-2280568-1.jpg"><p><strong>尼日利亚成为世界上第一个推出世界卫生组织推荐的新疫苗Men5CV疫苗的国家，可以防止人们感染五种脑膜炎球菌菌株。根据世界卫生组织消息，全球疫苗免疫联盟为这次疫苗和紧急疫苗接种活动以及全球脑膜炎疫苗储备提供了资金，并通过开展常规脑膜炎疫苗接种活动为低收入国家提供支持。                    </strong></p><div><p>尼日利亚位于非洲脑膜炎带，是非洲26个脑膜炎高度流行国家之一。去年，非洲各地报告的脑膜炎病例增加了50%。</p><p>世界卫生组织表示，尼日利亚在2023年10月1日至2024年3月11日期间暴发了血清型C脑膜炎奈瑟菌疫情，导致1742例疑似脑膜炎病例，包括在尼日利亚36个州中的7个州（阿达马瓦、包奇、贡贝、吉加瓦、卡齐纳、约贝、赞法拉州）出现101例确诊病例和153例死亡。</p><p>为了平息这场致命的疫情，尼日利亚在2024年3月25日至28日期间开展了一次免疫接种运动，最初为100多万1-29岁人群接种疫苗。</p><p>这种革命性的新疫苗在一次注射中提供对抗五种主要脑膜炎球菌菌株（A、C、W、Y和X）的强大屏障。这五种菌株都会引起脑膜炎和血液中毒。这比目前在非洲大部分地区使用的疫苗提供了更广泛的保护，目前使用的疫苗仅对A菌株有效。</p><p>这种新疫苗有可能大幅减少脑膜炎病例，并推动在战胜脑膜炎方面取得进展。这对于像尼日利亚这样流行多种血清型脑膜炎的国家尤其重要。这种新疫苗采用了与在尼日利亚消灭了A型脑膜炎球菌疫情的A型脑膜炎结合疫苗（MenAfriVac®）相同的技术。</p><p>这种新的多价结合疫苗的研发历时13年，是在帕斯适宜卫生科技组织与印度血清研究所开展合作的基础上研制出来的。英国政府外交、联邦和发展事务部提供的资金对其研发成功至关重要。</p><p>2023年7月，世卫组织对新的Men5CV疫苗（品牌名称为MenFive®）进行了预认证，并于2023年10月向各国发布了推出这种新疫苗的正式建议。2023年12月，全球疫苗免疫联盟为推出Men5CV疫苗分配了资源，目前可通过国际疫苗供应协调小组管理的应急储备为疫情应对提供疫苗，而通过大规模预防运动推出的疫苗接种活动预计将在2025年在脑膜炎地带国家开始。</p><p>世界卫生组织说，继尼日利亚发起脑膜炎疫苗接种运动之后，2024年4月在巴黎举行的脑膜炎问题国际峰会是在战胜脑膜炎道路上的又一个重要里程碑，各国领导人将在峰会上确定当前面临的挑战，评估下一步应采取的措施。这也为国家领导人和主要合作伙伴在政治和财政上作出承诺以便作为一个公共卫生问题加快实现到2030年消除脑膜炎的目标提供了一个机会。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%AE%89%E4%B8%9C%E5%B0%BC/" title="安东尼">安东尼</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 22:54</div><img src="https://s.rfi.fr/media/display/d267f044-fdc5-11ee-addf-005056bfb2b6/w:1280/p:16x9/bfb16505dff5e264d5c04abde2a58861fef405e57c416b42c8f1f0c36b35894a.png"><p><strong></strong></p><div><p>就教育界，他特别表示，他希望大学副校长能够收到安全部门的简报，以便更好地“了解问题的严重程度”。</p><p>道登还希望就敏感领域的研究安全展开咨询，提高大学经费的透明度，并研究现有的国家安全和外国投资法律如何适用于教师。</p><p>另一方面，这位部长强调说，“新冠疫情和俄罗斯在乌克兰的战争暴露了全球供应链的相互关联性，以及在俄罗斯推高天然气价格和中国实施经济胁迫行为的情况下，这种相互关联性的程度”。</p><p>道登宣布，英国当局将审查当前对半导体等新兴或战略技术的出口管制。英国政府已利用《国家安全与投资（NSI）法案》阻止中国实体多次收购英国半导体制造商的尝试。</p><p>英国副首相奥利弗·道登（Oliver James Dowden）表示，“我们必须确保我们在国外销售的技术产品不会被用来损害我们的国家利益”。</p><p>他继续说道，“我们看到有人蓄意利用贸易限制作为胁迫武器”；而“中国针对立陶宛和俄罗斯针对厄瓜多尔的做法”就是实例。他还补充说，“我们还看到了公共部门采购构成国家安全风险的例子，从监控系统到电信基础设施”。</p><p>他坚称：“这就是为什么我禁止华为参与我们的 5G 网络，并禁止中国监控设备进入主要政府站点。”伦敦于 2020 年 7 月宣布将中国巨头华为排除在其 5G 网络之外，理由是该国存在安全风险。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtB.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E5%2589%25AF%25E9%25A6%2596%25E7%259B%25B8-%25E8%258B%25B1%25E9%259D%25A2%25E4%25B8%25B4%25E6%259D%25A5%25E8%2587%25AA%25E4%25B8%25AD-%25E4%25BC%258A-%25E4%25BF%2584-%25E6%259C%259D%25E7%25AD%2589%25E6%2595%258C%25E5%25AF%25B9%25E5%259B%25BD%25E5%25AE%25B6%25E7%259A%2584%25E8%25AF%25B8%25E5%25A4%259A%25E5%25A8%2581%25E8%2583%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%89%AF%E9%A6%96%E7%9B%B8%EF%BC%9A%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD%E3%80%81%E4%BC%8A%E3%80%81%E4%BF%84%E3%80%81%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAWtB.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%89%AF%E9%A6%96%E7%9B%B8%EF%BC%9A%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD%E3%80%81%E4%BC%8A%E3%80%81%E4%BF%84%E3%80%81%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAWtB.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtB.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%89%AF%E9%A6%96%E7%9B%B8%EF%BC%9A%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD%E3%80%81%E4%BC%8A%E3%80%81%E4%BF%84%E3%80%81%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
