--- a/articles/rfi/999993.md
+++ b/articles/rfi/999993.md
@@ -1,5 +1,5 @@
-<!--1713406501000-->
-[拜登要保护美国钢铁和造船业免受中国不公平竞争影响 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240417-%E6%8B%9C%E7%99%BB%E8%A6%81%E4%BF%9D%E6%8A%A4%E7%BE%8E%E5%9B%BD%E9%92%A2%E9%93%81%E5%92%8C%E9%80%A0%E8%88%B9%E4%B8%9A%E5%85%8D%E5%8F%97%E4%B8%AD%E5%9B%BD%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%E5%BD%B1%E5%93%8D)
+<!--1713438902000-->
+[俄罗斯“非洲军团”布局非洲 - 聚焦非洲](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%81%9A%E7%84%A6%E9%9D%9E%E6%B4%B2/20240418-%E4%BF%84%E7%BD%97%E6%96%AF-%E9%9D%9E%E6%B4%B2%E5%86%9B%E5%9B%A2-%E5%B8%83%E5%B1%80%E9%9D%9E%E6%B4%B2)
 ------
 
-<div>17/04/2024 - 21:00</div><img src="https://s.rfi.fr/media/display/73a8772a-f6f1-11ee-b8cd-005056bfb2b6/w:1280/p:16x9/2024-04-10T023842Z_2041466065_RC2VT6ATFRE2_RTRMADP_3_ISRAEL-PALESTINIANS-BIDEN.JPG"><p><strong>正在进行竞选连任的美国总统拜登17日表示将以对抗“不公平竞争”为由，敦促对中国钢铁和铝征收3倍关税。美国贸易代表办公室（USTR）也在同一天宣布将对中国在造船、海运和物流领域的贸易行为展开调查，以回应美国5个工会近期的请愿。                    </strong></p><div><p>拜登和他的竞选对手特朗普都在争夺至关重要的蓝领选民，并承诺将重振美国制造业。特朗普曾发誓: 要对中国等国家增加关税。拜登则在17日对匹兹堡的钢铁工人发表讲话，公布多项取悦钢铁工人的措施，包括将特朗普政府对中国钢铁产品征收的7.5%的关税提高到25%、向墨西哥施压禁止中国转道墨西哥向美国销售钢铁及铝产品，同时对中国在造船、海事及物流领域的贸易做法启动可能导致更高关税的反倾销调查。</p><p>白宫发表声明说：“中国对其国内钢铁和铝业的政策和补贴，意味着高品质的美国产品被以人为压低价格的中国替代品所削弱，而中国替代品生产过程的碳排放更高。”一名美国资深官员告诉媒体，中国占全球钢铁产量的一半，并以远低于美国钢铁的价格对外出口。</p><p>拜登总统宣布的对中国钢铁和铝产品提高征收关税，还有待于美国贸易代表办公室在完成对特朗普总统时期的关税进行审核后的批准。美国贸易代表戴琪（Katherine Tai）4月16日在众议院表示，她的办公室“非常接近于完成”对中国关税的审核。</p><p>据白宫17日发表的情况说明书，拜登政府宣布采取新行动，是为了保护美国钢铁和造船业免受中国不公平行为的影响。有以下五大理由：</p><p>第一：美国工人继续面临来自中国进口钢铁和铝产品的不公平竞争，这些产品是世界上排放最密集的产品之一。</p><p>第二，拜登总统上任以来，商务部已对钢铁相关产品征收30多项反倾销和反补贴税，还对中国出口商的反竞争行为以及中国等国家规避贸易规则的行为进行了近 27 项调查。</p><p>第三，拜登总统正在指示他的高级团队与墨西哥合作，共同防止中国和其他国家逃避从墨西哥进口到美国的钢铝关税。 </p><p>第四，美国贸易代表正在对中国在造船、海事和物流领域的不公平贸易行为发起调查。这项调查是在美国钢铁工人联合会（USW）和其他四个工会提交请愿书之后进行的。</p><p>第五，拜登总统正在投资清洁的美国制造钢铁。今天的公告建立在政府对绿色钢铁生产的承诺之上。</p><p>美联社评论说，拜登总统提高对中国钢铁产品进口关税的举动，反映了拜登政府的国际贸易政策，与其争取关键摇摆州选票的努力出现交集的情况。不过，白宫坚称，这更是为了保护美国制造业免受中国不公平贸易做法之害，而不仅仅是为了激发工会成员的投票热情。</p><p>有分析表示，白宫此举可能会激怒北京中南海。另外，此举的经济风险还在于：对中国钢铁及铝产品征收更高关税，将可能使钢铁与铝产品成本价格升高，也将提升汽车、建筑材料和其他关键消费者产品的成本和价格。尽管美国的高通胀已是拜登总统的政治包袱，但拜登总统转向贸易保护主义，更是与其竞争对手特朗普的政策看齐。而所谓的301条款调查则是当年特朗普政府在与北京当局贸易战中的主要工具，用来证明征收关税的合理性。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 12:46</div><img src="https://s.rfi.fr/media/display/785e392c-0d70-11ea-b7ec-005056bfe576/w:1280/p:16x9/Carte-Libye-Niger-Burkina-410_0.png"><p><strong>一周前，一艘俄罗斯货船“机械马卡林号”（Mekhanic Makarin）经突尼斯苏塞港后停靠在利比亚东部。4月8日，两艘舰艇“伊万·格林”号和“亚历山大·奥特拉科夫斯基”号从俄罗斯位于叙利亚的塔尔图斯海军基地出发，停靠在利比亚托布鲁克。这两艘军舰自俄罗斯入侵乌克兰以来一直在黑海服役，负责为俄罗斯军队提供后勤装备和火炮。4月12日，伊尔-76运输机连夜将俄罗斯非洲军团士兵运送到尼日尔，该国与利比亚接壤。 在尼日尔发生军事政变前夕，同型号飞机也曾出现在布基纳法索，运送俄罗斯军人，教官，后勤人员。所有这些分散的有时彼此相距一千公里的部署，都证明莫斯科正在加强其在利比亚东部和中部的存在，以建立一条贯通萨赫勒地区的线路并实现其在利比亚建立军事基地的梦想。                    </strong></p><div><p>这是近日发表在法国《观点》杂志非洲版上的一篇题为《俄罗斯在利比亚安家》的长文的开篇，这篇关注俄罗斯非洲军团动向的文章接下来指出，对于一个发迹于西伯利亚大草原的发展中国家，选择利比亚展现出不同寻常的地理和地缘政治灵活性。利比亚这个国土面积三倍于法国的国家，坐拥1770公里的地中海海岸，隔海与意大利和希腊相望，它同时还与埃及、苏丹、乍得，尼日尔（萨赫勒）、突尼斯和阿尔及利亚（马格里布）接壤。这个国家面临着四股热点问题的挑战：圣战主义、走私，非法移民及正在肆虐苏丹的军事冲突……利比亚对于“非洲军队”来说是一个绝佳的机会。自2011年利比亚爆发革命推翻卡扎菲四十年独裁统治以来，在北约国家的军事干预及包括土耳其、阿联酋、卡塔尔、俄罗斯多国军事介入下，利比亚一直处于南北分裂状态，该国也是通往撒哈拉和萨赫勒地区的门户。</p><p>所谓俄罗斯“非洲军队”是指克里姆林宫的新军队，前身是已故普里戈金的瓦格纳雇佣军。“非洲军团”名称来自二次大战时驰骋北非的一支德国远征军，帅将为德国陆军元帅隆美尔。</p><p>2024年，整个萨赫勒地区危机四伏，自第二次世界大战以来，撒哈拉沙漠从未经历过如此的惊心动魄。马里、布基纳法索、尼日尔三国军头先后发动军事政变，轻易将曾经的宗主国法国的军事存在驱逐出境，同时投入克里姆林宫的怀抱。4月10号，一架装饰着俄罗斯国旗的白色宽体飞机降落在尼亚美机场，在飞机引擎震耳欲聋的噪音中，俄新社的记者对首批俄罗斯非洲军团士兵抵达尼日尔进行了评论，他说，“这意味着俄罗斯正在重返非洲”。事实上，莫斯科已经出现在从利比亚到苏丹、从萨赫勒到中非共和国的各个地区。继马里和布基纳法索之后，第三个由叛变军人领导的萨赫勒国家进一步成为西非亲俄阵营的成员。</p><p>尼日尔是克里姆林宫的一张王牌。这个人口两千五百万的国家位于世界最不稳定地区，是世界上最贫穷的国家之一，也是非洲向欧洲输送非法移民的集散地。尼日尔军头推翻民选总统巴祖姆后，这个曾经一直是萨赫勒地区欧美可靠盟友的国家，开始执政，先切断与法国的联系，关闭大使馆，要求一千五百名法国驻军离境，随后又撕毁与美国的安全协议，驱逐美国驻军，拒绝欧盟在阿加德兹执行其移民任务。走私不再被定为犯罪，它已被新颁布的法令合法化。去年12月，俄罗斯国防部副部长埃夫库罗夫 (Younous-bek Evkourov) 上将首次访问尼亚美，并与尼日尔签署了“加强安全合作”的秘密防务“协议”。 一个半月后，尼日尔过渡政府首脑扎伊纳率领一个大型部长级代表团访问了俄罗斯。2023年9月，在俄罗斯支持下，萨赫勒国家联盟成立，成员国马里，布基纳法索和尼日尔同时宣布脱离西非国家经济共同体。自此，尼日尔，这个萨赫勒地区曾经的欧美盟友彻底倒向俄罗斯。</p><p>法国国防部国际关系与战略总局下属军事学校战略研究所(IRSEM)俄罗斯影响力专家奥迪内特（Maxime Audinet）表示：“非洲军团抵达尼日尔标志着俄罗斯在该地区的持续扩张，并得到萨赫勒国家联盟（AES）制度化支持，莫斯科正通过这个新晋联盟施加影响力”。他说：“我们正在见证后普里戈金时代俄罗斯在萨赫勒地区的存在，这是由俄罗斯军事情报部门（GRU）和国防部精心策划的，他们正试图重新控制瓦格纳在非洲的遗产。”</p><p>俄罗斯正在非洲陷入危机的国家一步步确立自己的地位，与那些向克里姆林宫寻求安全保护的政变军头同谋，强加反西方议程。然而，达喀尔安全研究院高级研究员吉比·索乌表示：“非洲伙伴很快会明白，与俄罗斯的这种关系不会让他们如愿以偿，特别是在经济发展方面，因为中国、欧盟、美国以及现在的印度和土耳其在经济贸易上远远超过莫斯科。”</p><p>根据易卜拉欣基金会2023年8月发布的分析报告；俄罗斯仅占非洲出口总额的1.8%，而欧盟为26.7%，中国为19.9%，印度为5.6%。俄非贸易以原材料出口为主，这些原材料对非洲大陆的经济几乎没有附加值。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%A1%91%E9%9B%A8/" title="桑雨">桑雨</a></div></div></div></div>
