--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-20 [以色列对伊朗: 挽回颜面，重新起步](/articles/voa/1016260.md)
+
+4-20 [美中贸易矛盾加剧之际，中国对从美国进口的丙酸实施反倾销措施](/articles/voa/1016261.md)
+
 4-20 [台湾股市遭遇黑色星期五，创单日最大跌点纪录](/articles/voa/1016262.md)
 
 4-20 [从硬件到软件到芯片 中国新式自力更生的步伐迈得有多远？](/articles/voa/1016263.md)
@@ -596,8 +600,4 @@
 4-9 [伊朗外长在致命攻击后开启驻叙利亚新领事馆](/articles/voa/1016558.md)
 
 4-9 [中国银行决定英国水务巨头命运，引发国家安全担忧](/articles/voa/1016559.md)
-
-4-9 [香港通过23条立法后美国反应审慎令社运和民主人士失望](/articles/voa/1016560.md)
-
-4-9 [美国财长警告中国的银行，如果你们支持俄罗斯的战争 美国不会放过你](/articles/voa/1016561.md)
 
