--- a/articles/rfi/999952.md
+++ b/articles/rfi/999952.md
@@ -1,5 +1,5 @@
-<!--1713545102000-->
-[在美国，“中国钢铁危害成了竞选的一个招式” - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240418-%E5%9C%A8%E7%BE%8E%E5%9B%BD%EF%BC%8C-%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%B1%E5%AE%B3%E5%B7%B2%E6%88%90%E4%B8%BA%E7%AB%9E%E9%80%89%E7%9A%84%E4%B8%80%E4%B8%AA%E6%8B%9B%E5%BC%8F)
+<!--1713554102000-->
+[第77届戛纳电影节官方海报致敬黑泽明 在紧张时局背景下呼唤团结](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240419-%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%E5%AE%98%E6%96%B9%E6%B5%B7%E6%8A%A5%E8%87%B4%E6%95%AC%E9%BB%91%E6%B3%BD%E6%98%8E-%E5%9C%A8%E7%B4%A7%E5%BC%A0%E6%97%B6%E5%B1%80%E8%83%8C%E6%99%AF%E4%B8%8B%E5%91%BC%E5%94%A4%E5%9B%A2%E7%BB%93)
 ------
 
-<div>19/04/2024 - 00:47</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。                    </strong></p><div><p>周四法国世界报发表的一篇文章表示，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。</p><p>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。顺便，拜登也对被唐纳德·特朗普的演讲给打动了的工人阶级发起了新的魅力攻势。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。</p><p>相关的文章写道，在20世纪70年代之前，宾夕法尼亚州的匹兹堡，是让美国国家工业变得伟大的一个地方，随后，却遭受了去工业化的蹂躏，可以说是美国“铁锈带”的核心。4月17日星期三，美国总统选择了匹兹堡这个“铁锈带”的核心地点，对中国钢铁倾销发起了攻击，同时，也对受到特朗普在美国总统选举的摇摆州所发表的演讲所迷惑的工人阶级，发起了新的魅力攻势。乔·拜登当天在钢铁工人工会的总部宣布，他希望对从中国进口的钢铁和铝所征收的税率是如今的三倍，目前的税率是7.5%。中国的钢铁产量占世界的近一半，存在巨大的产能过剩，中国钢铁基本产品的价格只有美国钢铁制造商的一半，以钢铁为基础的中国工业制品如汽车、风力涡轮机等充斥着市场。白宫坚称，这一切还对碳排放的减少，非常不利。</p><p>美国总统拜登在X社交网络上宣称：“我希望与中国竞争，而不是冲突。”拜登还向钢铁工人工会重申了他希望工会能够参与到捍卫“美国制造”的行动中去。同时，拜登还反对将美国钢铁公司出售给日本的新日铁公司，拜登表示，“一个多世纪以来”，美国钢铁公司都是一个“标志性公司”，它“必须继续是一个美国公司”。拜登还表示，像特朗普一样，他已经做好了准备，制止美国联邦外国投资委员会目前正在审查的这项售卖行动。</p><p><strong>持续性的、全方位施压</strong></p><p>法国世界报的文章表示，自2016年以来，中国钢铁的危害已成为了美国竞选活动中的一个招式。在拜登的作为总统候选人所发表的有关日本和中国的演讲中，不乏机会主义，甚至是厚颜无耻。诚然，新日铁是日本公司，但日本是美国坚定不移的盟友。至于中国的钢铁威胁，如果我们相信美国人口普查局的数据的话，那么，是不存在中国钢铁威胁的：因为，根据美国人口普查局的数据，美国进口的中国钢铁很少，只占其采购量的3%；美国钢铁协会的数据甚至显示，中国钢铁在美国钢铁采购中只占2.1%！</p><p>但是，华盛顿决定对中国施加永久性的、全方位的压力。与“芯片之战”相比，“钢铁之战”根本不算什么。华盛顿以国家安全的为名，正在尽一切努力、包括对其盟友施加压力，以便让北京没有可能来获得最新一代的电子芯片。</p><p>拜登指责习近平把先进的芯片用于“错误的地方”。习近平则认为，用的地方很对：是为了让中国在2050年成为世界领先的经济、科技和军事强国。</p><p>中国梦是美国的噩梦。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div>
+<div>19/04/2024 - 19:34</div><img src="https://s.rfi.fr/media/display/ebe59fdc-fe72-11ee-bc3f-005056a97e36/w:1280/p:16x9/Capture-2199.PNG"><p><strong>第77届戛纳电影节官方海报刚刚在本周五（4月19日）揭晓。海报取自日本著名导演黑泽明的电影《八月狂想曲》中的一幅画面，《八月狂想曲》曾在1991年的戛纳电影节上放映。        </strong></p><div><p>这是一幅充满诗意的美好画面：远山背景映衬，在柔和的月光下并排而坐的五人仰头遥视，电影中当空的月亮在这里被换成了电影节的标志：金棕榈。整个画面色调幽蓝，柔和静谧。第77届戛纳电影节即将在今年 5月14 日至25日举行。报道指，电影节以《八月狂想曲》影片画面作为海报，是在现今紧张的国际地缘政治背景下发出的团结呼吁。</p><p>这也是对日本杰出导演黑泽明的致敬，有“电影界的莎士比亚”之誉的黑泽明是日本电影最具国际影响力的导演和编剧之一，在近六十年的电影生涯中创作了《罗生门》、《七武士》、《大镖客》、《天国与地狱》、《影武者》、《乱》等代表作。 《八月狂想曲》是他生前执导的倒数第二部影片，1991年当该片在戛纳电影节上展映时黑泽明已81岁。该片呼吁人们的团结，强调寻求万物和谐的重要意义。</p><p>在《八月狂想曲》中，一位祖母是1945年8月9日长崎原子弹爆炸的受害，她向她的孙子和美国侄子传递了她对爱和正直的信念，以此作为对战争的对抗。影片充满了沉思和温柔。</p><p>戛纳电影节在声明中写道，“作为电影的一面镜子，这幅海报以特有的方式致敬第七艺术：电影让每个人都有发言权，所以它能够解放思想；电影铭记伤痛，所以它是对遗忘的对抗；电影见证了危险，所以它呼唤团结；电影抚平创伤，所以它帮助了生命的修复。”</p><p>声明说，在这个脆弱的世界，人们不断质疑他人的存在，戛纳电影节重申了这样一个信念：即电影是表达和分享的世界圣地，这里书写着我们的人性和自由。</p><p>报道指，继去年戛纳电影节以凯瑟琳·德纳芙的形象、2021 年斯派克·李以及 2018 年让-保罗·贝尔蒙多和安娜·卡琳娜的形象作为电影节海报之后，今年的戛纳又回到了具有强烈象征意义的标志性电影场景作为官方海报。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3u.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240419-%25E7%25AC%25AC77%25E5%25B1%258A%25E6%2588%259B%25E7%25BA%25B3%25E7%2594%25B5%25E5%25BD%25B1%25E8%258A%2582%25E5%25AE%2598%25E6%2596%25B9%25E6%25B5%25B7%25E6%258A%25A5%25E8%2587%25B4%25E6%2595%25AC%25E9%25BB%2591%25E6%25B3%25BD%25E6%2598%258E-%25E5%259C%25A8%25E7%25B4%25A7%25E5%25BC%25A0%25E6%2597%25B6%25E5%25B1%2580%25E8%2583%258C%25E6%2599%25AF%25E4%25B8%258B%25E5%2591%25BC%25E5%2594%25A4%25E5%259B%25A2%25E7%25BB%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%E5%AE%98%E6%96%B9%E6%B5%B7%E6%8A%A5%E8%87%B4%E6%95%AC%E9%BB%91%E6%B3%BD%E6%98%8E%20%E5%9C%A8%E7%B4%A7%E5%BC%A0%E6%97%B6%E5%B1%80%E8%83%8C%E6%99%AF%E4%B8%8B%E5%91%BC%E5%94%A4%E5%9B%A2%E7%BB%93%20-%20https%3A%2F%2Frfi.my%2FAX3u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%E5%AE%98%E6%96%B9%E6%B5%B7%E6%8A%A5%E8%87%B4%E6%95%AC%E9%BB%91%E6%B3%BD%E6%98%8E%20%E5%9C%A8%E7%B4%A7%E5%BC%A0%E6%97%B6%E5%B1%80%E8%83%8C%E6%99%AF%E4%B8%8B%E5%91%BC%E5%94%A4%E5%9B%A2%E7%BB%93%20-%20https%3A%2F%2Frfi.my%2FAX3u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3u.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%E5%AE%98%E6%96%B9%E6%B5%B7%E6%8A%A5%E8%87%B4%E6%95%AC%E9%BB%91%E6%B3%BD%E6%98%8E%20%E5%9C%A8%E7%B4%A7%E5%BC%A0%E6%97%B6%E5%B1%80%E8%83%8C%E6%99%AF%E4%B8%8B%E5%91%BC%E5%94%A4%E5%9B%A2%E7%BB%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
