--- a/articles/rfi/999953.md
+++ b/articles/rfi/999953.md
@@ -1,5 +1,5 @@
-<!--1713543301000-->
-[布林肯: 中国不能一边希望与欧洲友好 一边助长对欧洲安全的最大威胁](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E5%B8%83%E6%9E%97%E8%82%AF-%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD-%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81)
+<!--1713554102000-->
+[法新社：奇瑞落户西班牙 中国加强在欧洲汽车市场攻势](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240419-%E6%B3%95%E6%96%B0%E7%A4%BE-%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99-%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E7%9A%84%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF)
 ------
 
-<div>19/04/2024 - 17:33</div><img src="https://s.rfi.fr/media/display/660bc7fe-fe56-11ee-9a83-005056bf30b7/w:1280/p:16x9/AP24110423238580%20%281%29.jpg"><p><strong>七国集团（G7）在意大利卡普里岛举行外长会议，根据周五的会议最后公报，G7对中国向俄罗斯转让材料助其在乌克兰的战争机器表示"强烈关切"。        </strong></p><div><p>在周五的新闻发布会上，美国国务卿安东尼-布林肯指责中国间接"助长"了在乌克兰的冲突。布林肯说：“中国如果一方面希望与欧洲和其他国家保持友好关系，就不能另一方面助长冷战结束以来对欧洲安全的最大威胁”。</p><p>据美国外交人士称，布林肯是在一次专门讨论支持乌克兰抵抗俄罗斯入侵的工作会议上表达了对中国向俄罗斯提供军民两用产品支持问题的担忧，并表示支持两年多来一直与俄罗斯军队作战的乌克兰。</p><p>法新社4月19日报道，G7外长"在会议结束时发表的公报中说："我们对中国公司向俄罗斯转让军民两用材料和武器部件深表关切，俄罗斯正利用这些材料和部件提高其军事生产。</p><p>G7外长指出，中国的转让使俄罗斯得以重建和振兴其国防工业，对乌克兰和国际和平与安全构成威胁"，他们对此表示遗憾。</p><p>G7敦促"中国因该确保停止这种支持，因为这将延长冲突，增加俄罗斯对其邻国的威胁"。</p><p>七国集团由美国、日本、加拿大、法国、德国和今年担任轮值主席国的意大利组成。</p><p>该报道说，特别是，美国人希望欧洲国家能向中国政府施压，迫使其减少对俄罗斯的军事支持，因为华盛顿自己也承认，俄罗斯军队正在乌克兰领土上占据优势。</p><p>美国说，几个月来，它一直在目睹中国向俄罗斯转让装备，莫斯科正利用这些装备重建其国防工业，这在乌克兰战场上得到了反映。</p><p>华盛顿给中国划定了一条红线，即不得直接提供武器给俄罗斯用于乌克兰战争--迄今为止还没有看到相反的证据。</p><p>但在中俄关系加深的背景下，美国越来越多地谴责北京通过“迂回渠道”支持俄罗斯，并将中国这些支持与俄罗斯在乌克兰的战争建立直接的关联。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX2N.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E5%25B8%2583%25E6%259E%2597%25E8%2582%25AF-%25E4%25B8%25AD%25E5%259B%25BD%25E4%25B8%258D%25E8%2583%25BD%25E4%25B8%2580%25E8%25BE%25B9%25E5%25B8%258C%25E6%259C%259B%25E4%25B8%258E%25E6%25AC%25A7%25E6%25B4%25B2%25E5%258F%258B%25E5%25A5%25BD-%25E4%25B8%2580%25E8%25BE%25B9%25E5%258A%25A9%25E9%2595%25BF%25E5%25AF%25B9%25E6%25AC%25A7%25E6%25B4%25B2%25E5%25AE%2589%25E5%2585%25A8%25E7%259A%2584%25E6%259C%2580%25E5%25A4%25A7%25E5%25A8%2581%25E8%2583%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAX2N.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAX2N.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX2N.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 18:55</div><img src="https://s.rfi.fr/media/display/07351c08-fe65-11ee-9c32-005056bf30b7/w:1280/p:16x9/2024-04-19T092252Z_1078934132_RC2L97AGGKWG_RTRMADP_3_AUTOS-SPAIN-CHERY.JPG"><p><strong>中国汽车制造商奇瑞（Chery）周五 (4月19号) 正式宣布进驻西班牙，计划到 2024 年底将主要生产电动汽车。法新社报道称，这再次表明了中国政府在欧洲市场的雄心壮志。据专家称，在欧洲本土设厂将使中国集团能够规避布鲁塞尔可能对汽车进口征收的关税，并更有效地融入欧洲大陆市场。        </strong></p><div><p>报道称，奇瑞汽车以生产低成本汽车著称，是继今年 2 月宣布在匈牙利建设首个欧洲工厂的汽车业巨头比亚迪之后，第二个宣布在欧洲建立工厂的中国品牌。不过，比亚迪工厂还要三年才能投产。</p><p>奇瑞工厂于本周二已经宣布，原则上将成为与西班牙EBRO-EV 汽车公司的合资企业的一部分，该公司是一家专门生产电动皮卡的集团，其前身是一个于 1987 年消失的卡车和面包车品牌。</p><p> 该合资企业由 Ebro-EV Motors 持有多数股权，将设在 2021 年关闭的巴塞罗那前日产工厂。双方在周五的新闻发布会上表示，合资公司将创造 "1250 个就业岗位"，其中 "150 个将在未来几个月内创造"。</p><p>日产在巴塞罗那的工厂有 3000 名员工，2021 年部分出售给摩托车制造商 Silence 和 Ebro-EV Motors。但马德里与西班牙集团一起，正在寻找一个工业合作伙伴来重新启动该工厂。</p><p><strong>规避关税 占据市场</strong></p><p>法新社称，奇瑞的决定证实了西班牙在汽车行业的领先地位。根据欧洲汽车制造商协会的数据，去年西班牙组装了 187万辆汽车，是欧洲第二大汽车生产国，仅次于德国（396万辆）。</p><p>这次中国与西班牙汽车领域的合作正值北京和布鲁塞尔之间商业关系紧张的背景下，今年 9 月，布鲁塞尔对中国政府向电动汽车行业提供的公共补贴展开了调查，并指责这些补贴扭曲了竞争。</p><p>欧盟委员会表示，这些补贴被用来显示 "人为的低价"，欧盟委员会可能会对中国汽车征收惩罚性关税，从而有可能引发与中国政府的贸易战。</p><p>据专家称，在欧洲本土设厂将使中国集团能够规避布鲁塞尔可能对汽车进口征收的关税，并更有效地融入欧洲大陆市场。</p><p> 近年来，中国电动汽车市场异常活跃，涌现出了比亚迪，极氪、深蓝和长城等数十个本土品牌，它们正在与特斯拉和其他外国制造商展开竞争。</p><p>   其中一些品牌正试图加强其在欧洲的影响力，有些已经在欧洲设立了销售网点和研发中心。它们正在抱怨所面临的障碍，声称这些障碍是在欧洲现有汽车制造商的授意下设置的。</p><p><strong>"再工业化进程的象征"</strong></p><p> 根据周五在西班牙首相佩德罗-桑切斯和奇瑞副董事长张贵兵见证下正式签署的协议条款，中国集团将在未来几个月内利用现有基础设施，开始组装基于其欧姆达 5 车型的内燃和电动汽车。</p><p>从 2024 年第四季度起，还将生产以 Ebro 品牌销售的电动 SUV。奇瑞和EBRO在新闻稿中表示，他们将在2027年实现 "5万辆 "的总产量，并在2029年实现 "15万辆 "的总产量。</p><p>奇瑞汽车股份有限公司副总经理兼国际公司总经理张贵兵当天表示，“我们将为当地人创造数千个就业岗位，并逐步构建整车及其零部件产业园。在具备一定规模之后，进一步出口到欧盟和其他国家。我们希望这个Ebro能够成为奇瑞埃布罗合作后主要生产和出口基地。”</p><p> 佩德罗-桑切斯在讲话中对这一 "将创造财富 "和 "就业机会 "的项目表示满意，认为奇瑞和埃布罗的宣布是 "整个西班牙 "正在进行的 "再工业化进程的象征"。</p><p> 奇瑞成立于1997年，是一家国有企业。该品牌声称到 2023 年将售出188万辆汽车，15年前在中国非常受欢迎，尤其是针对当地市场推出的小型汽油城市汽车。</p><p>奇瑞还不是中国最受欢迎的电动汽车制造商之一，但它已开始向这一细分市场和高端电动汽车领域进军。它是世界领先的中国汽车出口企业（到2023年出口了937,000辆）。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3V.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240419-%25E6%25B3%2595%25E6%2596%25B0%25E7%25A4%25BE-%25E5%25A5%2587%25E7%2591%259E%25E8%2590%25BD%25E6%2588%25B7%25E8%25A5%25BF%25E7%258F%25AD%25E7%2589%2599-%25E4%25B8%25AD%25E5%259B%25BD%25E5%258A%25A0%25E5%25BC%25BA%25E5%259C%25A8%25E6%25AC%25A7%25E6%25B4%25B2%25E7%259A%2584%25E6%25B1%25BD%25E8%25BD%25A6%25E5%25B8%2582%25E5%259C%25BA%25E6%2594%25BB%25E5%258A%25BF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%95%E6%96%B0%E7%A4%BE%EF%BC%9A%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99%20%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF%20-%20https%3A%2F%2Frfi.my%2FAX3V.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%95%E6%96%B0%E7%A4%BE%EF%BC%9A%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99%20%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF%20-%20https%3A%2F%2Frfi.my%2FAX3V.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3V.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%95%E6%96%B0%E7%A4%BE%EF%BC%9A%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99%20%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
