--- a/articles/rfi/999957.md
+++ b/articles/rfi/999957.md
@@ -1,5 +1,5 @@
-<!--1713541502000-->
-[印度大选启动投票，莫迪能否蝉联第三任期6月初见分晓](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240419-%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93)
+<!--1713552302000-->
+[美国众院调查发现华尔街向黑名单内的中国公司输送了数十亿美元](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83)
 ------
 
-<div>19/04/2024 - 14:11</div><img src="https://s.rfi.fr/media/display/0606e2ba-fe30-11ee-9710-005056bfb2b6/w:1280/p:16x9/2024-04-19T075100Z_1586901846_RC2F97A5NAJV_RTRMADP_3_INDIA-ELECTION.JPG"><p><strong>印度大选19日起陆续在全国各地展开，一直持续到6月1日。9亿多选民将选出543名国会下院议员。从目前情况看，已经连续两届总理任期的莫迪身后的人民党有望再次在国会获得多数席位，让莫迪蝉联第三任期。        </strong></p><div><p>印度全国大选被看作是全球规模最大的投票活动。全国有9亿6千800万选民，超过美国、欧洲联盟以及俄罗斯合计总人口。投票活动全程历时一个多月，分七个阶段进行。检票活动在6月4日才全面展开。通常情况下，结果当天即可揭晓。</p><p>恒河沿岸重要朝圣城市赫里德瓦尔（Haridwar）是首批启动投票的地区之一。总理莫迪当天向选民，尤其是年青选民发出呼吁，希望他们踊跃投票。</p><p>最大反对党、曾常年把持政权的国大党也同天呼吁选民投票，以便“告别通货膨胀，告别失业，告别仇恨，告别不公”。</p><p>从目前情况来看，已经73岁的现任总理莫迪有望再次获胜，蝉联第三个任期。美国独立民调机构皮尤研究中心2023年的一项调查显示，担任总理已经近十年的莫迪仍然享有近80%的民意支持。</p><p>十年间，印度在莫迪领导下在国际舞台影响力提升，并跃居世界第五大经济体。在中美两大国全面战略竞争的背景下，印度成为西方国家无论是战略部署，还是企业投资，竞相争取的对象。</p><p>但莫迪任下的印度也越来越远离西方国家的民主标准。莫迪大力助长了印度教民族主义势力，引发国内不同宗教信仰族群间的紧张关系。在这次投票活动启动前不久，莫迪还亲自出席了一座供奉印度教神灵的寺庙的落成典礼。而这所寺庙修建在被印度教狂热分子摧毁的一座有数千年历史的清真寺地址上。</p><p>莫迪政府也加强了对反对声音的打压。许多反对派人士或者遭遇犯罪调查，或者被关入监狱。今年2月，国大党的银行账户被金融监管部门冻结。反对派各政党试图联合抗衡的努力看来效果不彰，到目前为止尚没有推出可能出任总理的人选。</p><p>国际非政府团体“无疆界记者”组织的报告认为，莫迪2014年上台以来，印度在新闻自由度年度排行中倒退了21位，在180个国家和地区中排行第161。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWzM.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240419-%25E5%258D%25B0%25E5%25BA%25A6%25E5%25A4%25A7%25E9%2580%2589%25E5%2590%25AF%25E5%258A%25A8%25E6%258A%2595%25E7%25A5%25A8%25EF%25BC%258C%25E8%258E%25AB%25E8%25BF%25AA%25E8%2583%25BD%25E5%2590%25A6%25E8%259D%2589%25E8%2581%2594%25E7%25AC%25AC%25E4%25B8%2589%25E4%25BB%25BB%25E6%259C%259F6%25E6%259C%2588%25E5%2588%259D%25E8%25A7%2581%25E5%2588%2586%25E6%2599%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWzM.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 14:23</div><img src="https://s.rfi.fr/media/display/ac5979d4-da04-11ee-ba46-005056a90284/w:1280/p:16x9/AP24058715129409.jpg"><p><strong>美国国会一项调查发现，华尔街动用了数十亿美元的美国退休储蓄和其他投资来购买“指数基金”股票，其中50%以上是被华盛顿列入黑名单的中国公司。        </strong></p><div><p>据华尔街日报4月18日报道，由两党组成的美国众议院中共问题特别委员会被受权为美国制定对抗中国的战略，其一项调查重点是全球最大的资产管理公司贝莱德（BlackRock）和股票指数编制公司摩根士丹利资本国际公司（MSCI）。</p><p>该调查是对美国金融机构如何为投资中国公司提供便利的一次广泛审查，美国政府指责这些公司加强了中国的军事力量并侵犯了人权。</p><p>众议院中共问题特别委员会没有立法权，但在报告中敦促美国立法者在中美竞争加剧之际限制此类资本流动。该委员会在周四发布的报告中表示：“可能令许多美国人感到惊讶的是，这种活动并不违法。”</p><p>上述资本国际公司表示，它们没有违反任何法律，并坚称它们几乎没有自由裁量权将中国实体独立排除在指数基金之外。</p><p>华日的这个报道说，多年来，美国的金融家一直是中国在华盛顿的最亲密盟友。但随着中国长达数十年的繁荣逐渐结束，美国投资者正从这个世界第二大经济体撤退。来自华盛顿的政治压力不断加大，即使中国的经济状况有所改善，企业很可能难以扭转颓势。美国一些大型养老基金已经少了在中国的投资，或停止了在中国的新投资。</p><p>美国国会众议院中共问题特别委员会在报告中总结称，通过投资“指数”基金，美国金融机构去年向大约63家被美国盯上的中国公司输送了65亿美元，其中包括“航空航天”和“国防企业集团”“中国航空工业集团”、“基因组学公司华大基金（BGI）和互联网安全公司奇虎360。</p><p>这个委员会的报告称，摩根士丹利资本国际公司（MSCI）通过将这些中国公司纳入指数，为 37 亿美元的投资提供了便利。报告指出，贝莱德通过跟踪这些指数的基金投资了至少19亿美元。</p><p>国会委员会讨论的问题涉及贝莱德（BlackRock）等资产管理公司，这些公司利用摩根士丹利资本国际公司（MSCI）编制的指数为养老金、大学捐赠基金和其他长期投资者建立投资组合。虽然贝莱德等公司只是通过指数基金购买了被列入黑名单的中国公司的股票，MSCI 也没有向它们提供资金，但国会委员会的调查认为，这些公司帮助将美国人的储蓄引入相关的中国公司。</p><p>与这些公司的规模相比，金额相对较小。但这一发现涉及到一场政治辩论的核心，这场辩论在美国总统大选前夕可能会愈演愈烈：包括美国对中国的强硬立场，以及被视为促进了中国经济增长的美国公司。</p><p>华日的这个报道说，唐纳德-特朗普（Donald Trump）正在与拜登总统（President Biden）争夺重返白宫的机会，如果特朗普赢得总统竞选，他将提出大幅限制中国进入美国市场的想法。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWzc.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E9%2599%25A2%25E8%25B0%2583%25E6%259F%25A5%25E5%258F%2591%25E7%258E%25B0%25E5%258D%258E%25E5%25B0%2594%25E8%25A1%2597%25E5%2590%2591%25E9%25BB%2591%25E5%2590%258D%25E5%258D%2595%25E5%2586%2585%25E7%259A%2584%25E4%25B8%25AD%25E5%259B%25BD%25E5%2585%25AC%25E5%258F%25B8%25E8%25BE%2593%25E9%2580%2581%25E4%25BA%2586%25E6%2595%25B0%25E5%258D%2581%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83%20-%20https%3A%2F%2Frfi.my%2FAWzc.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83%20-%20https%3A%2F%2Frfi.my%2FAWzc.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWzc.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
