--- a/articles/rfi/999958.md
+++ b/articles/rfi/999958.md
@@ -1,5 +1,5 @@
-<!--1713541502000-->
-[香港「七连跌」被挤出全球十大货柜港  机场贷运连续13年居首](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E9%A6%99%E6%B8%AF-%E4%B8%83%E8%BF%9E%E8%B7%8C-%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF-%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96)
+<!--1713552302000-->
+[伊朗境内爆炸原因疑点重重，国际社会同声呼吁克制 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240419-%E4%BC%8A%E6%9C%97%E5%A2%83%E5%86%85%E7%88%86%E7%82%B8%E5%8E%9F%E5%9B%A0%E7%96%91%E7%82%B9%E9%87%8D%E9%87%8D%EF%BC%8C%E5%9B%BD%E9%99%85%E7%A4%BE%E4%BC%9A%E5%90%8C%E5%A3%B0%E5%91%BC%E5%90%81%E5%85%8B%E5%88%B6)
 ------
 
-<div>19/04/2024 - 10:39</div><img src="https://s.rfi.fr/media/display/04d7f756-fe28-11ee-9cd8-005056a97e36/w:1280/p:16x9/hk-203.jpg"><p><strong>曾雄踞全球货柜港排名榜首的香港货柜码头，在吞吐量连续七年下跌之后，于去年以1440万个标准箱(TEU)正式跌出「十大」，被中东的杜拜取代。至于同属中国政府期望香港发展的「八大中心」之一的航运枢纽则传来令官员松一口气的消息，香港机场去年再度荣膺全球最繁忙货运机场，年内处理货运量达 430万公吨，是该机场连续第十叁年获选为全球最繁忙货运机场。        </strong></p><div><p>法国航运顾问公司Alphaliner指出，香港在2023年的货柜处理量有1440.1个标准箱，以7.2万个标准箱之差，让杜拜抢去全球最繁忙货柜港第十名的位置，屈居第11位，是首次跌出全球十大之列。</p><p>据Alphaliner发布的数据，全球最繁忙的叁十个货柜港口中，中国的上海以4915.8万个标准箱居首位，紧随其后的是新加坡(3901.3万个TEU)和宁波-舟山港(3530万个TEU)，接着是青岛丶深圳丶广州丶韩国釜山丶天津丶美国的洛杉矶-长滩港，以及杜拜的杰贝阿里港(Jebel Ali)。意味在「十大」中，中国港口占了六个；若以吞吐量计算，中国港口的吞吐量更占全球叁十个最繁忙货柜港的51%。</p><p>曾经连续十一年蝉联全球港口货柜吞吐量排行榜第一的香港，在中国港口兴旺的情况下，货柜吞吐量拾级而下，去年更按年大减13.7%而跌出全球十大，排第11位；与疫情前的2019年相比，跌幅达 21.3%，是连续第七年下跌，反映香港港口吞吐量正处于长期萎缩期，部分原因是货运被邻近的深圳和广州抢走，例如毗邻的深圳，去年的吞吐量便是香港的一倍有馀。</p><p>不过，运输及物流局昨(18日)晚于社交媒体发文，指根据国际航运业权威媒体Lloyd's List的方法，「估计」香港港口的货柜吞吐量去年仍然排名全球第十，较2022年下跌一名。局方指出，与Lloyd's不同，Alphaliner把洛杉矶港及长滩港合并计算，后者的排名，2022年时高香港一位。该局续称，大家着眼于香港货柜吞吐量有下跌趋势之馀，更应继续巩固及发展香港港口的优势。</p><p><strong>今年首季货运量续跌2.3% 处转型十字路口</strong></p><p>但以今年首季数字看来，香港货柜吞吐量的跌势未止。根据港府统计处和海运港口局秘书处的估计，香港今年头叁个月共处理了335.2万个标准箱，较去年同期收缩2.3%。加上主要航运联盟把香港剔除于2025年亚洲至美国西岸的远程航线，香港的吞吐量势将受影响。</p><p>本台日前报道已引述香港定期班轮协会主席罗振麟（Roberto Giannetta）指出，香港贷柜吞吐量虽在下滑，但在亚洲区内(Intra-Asia)市场这个全球最大航运市场的份额却在不断上升，香港可转作驳运中心。该会在报道刊登后发来数据作补充，指香港去年处理的1440万个标准箱中，亚洲区内的货运量占了六成，足证香港可为南中国提供最大亚洲区内市场网络。</p><p>相反，香港的空运业务仍然手执全球牛耳。根据国际机场协会15日公布的最新数据，按总货运量计算，香港国际机场再度获选为2023年全球最繁忙货运机场，年内机场处理的货运量达430万公吨，这是香港国际机场自2010年以来第十叁次获选为全球最繁忙货运机场。运物局局长林世雄指出，随着机场的第叁条跑道系统今年内投入运作，预计到2035年时，香港机场每年可处理1000万公吨货物，国际航空枢纽的地位将得以巩固。</p><p>中国在「十四五」规划中要求香港维持「八大中心」地位，分别是原来的国际金融中心丶国际航运中心丶国际商贸中心和亚太地区国际法律及解决争议服务中心，以及新增的国际航空枢纽中心丶国际创新科技中心丶区域知识产权贸易中心和中外文化艺术交流中心。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWwg.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E9%25A6%2599%25E6%25B8%25AF-%25E4%25B8%2583%25E8%25BF%259E%25E8%25B7%258C-%25E8%25A2%25AB%25E6%258C%25A4%25E5%2587%25BA%25E5%2585%25A8%25E7%2590%2583%25E5%258D%2581%25E5%25A4%25A7%25E8%25B4%25A7%25E6%259F%259C%25E6%25B8%25AF-%25E6%259C%25BA%25E5%259C%25BA%25E8%25B4%25B7%25E8%25BF%2590%25E8%25BF%259E%25E7%25BB%25AD13%25E5%25B9%25B4%25E5%25B1%2585%25E9%25A6%2596&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%A6%99%E6%B8%AF%E3%80%8C%E4%B8%83%E8%BF%9E%E8%B7%8C%E3%80%8D%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF%20%20%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96%20-%20https%3A%2F%2Frfi.my%2FAWwg.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%A6%99%E6%B8%AF%E3%80%8C%E4%B8%83%E8%BF%9E%E8%B7%8C%E3%80%8D%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF%20%20%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96%20-%20https%3A%2F%2Frfi.my%2FAWwg.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWwg.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%A6%99%E6%B8%AF%E3%80%8C%E4%B8%83%E8%BF%9E%E8%B7%8C%E3%80%8D%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF%20%20%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 15:30</div><img src="https://s.rfi.fr/media/display/c0fc8d5c-fe37-11ee-b2ed-005056a97e36/w:1280/p:16x9/Carte-Iran-RFI.png"><p><strong>伊朗中部伊斯法罕一座军事基地附近19日凌晨响起巨大的爆炸声响，连日来全球对中东地区冲突随伊朗大举袭击以色列的报复性行动而扩大的担心进一步提升，各地股市也在消息传出的第一时间纷纷下挫。但在众多呼吁有关各方克制、避免升级的表态中，这起爆炸事件起因为何？是否的确是以色列袭击行动所为，截至本文截稿时止，仍然不甚明朗。                    </strong></p><div><p><strong>伊朗否认有来自境外的袭击</strong></p><p>根据伊朗各方通讯社目前通报的消息，该国中部地区一个军事基地附近19日拂晓时发生三起爆炸，<strong>伊斯法罕</strong>地区都听到了强烈的爆炸声响，但爆炸原因尚不明了。该通讯社消息还指出，伊朗高度敏感的防空系统在多地应声启动，并击落一些无人机。而从他们掌握的消息来看，没有“来自境外的攻击行动”，伊朗核设施也“没有受到任何重大损坏”。国际能源署当日也证实，尚没有伊朗境内核设施遇袭受损的消息。美国《纽约时报》引述一些伊朗负责人报道指出，发生小型无人机袭击行动，这些无人机可能是自伊朗本土出发，伊朗防空系统没有监测到进入伊朗空域的不明飞行物。</p><p>另据法新社发自德黑兰的消息，19日当天，伊朗总统易卜拉欣-莱希在爆炸发生数小时后，在东北部城市<strong>达姆甘</strong>向数百人发表讲话时，虽然简短提到中东地区的紧张情势，但完全没有提及当天的爆炸事件。</p><p><strong>《华盛顿邮报》称以色列事前知会华盛顿</strong></p><p>但与此同时，也有一些美国媒体则各自引述消息，称以色列19日对伊朗实施了报复性打击。美国NBC和CNN两家电视台都引述消息人士以及一名美国负责人报道指出，以色列在行动前曾通报华盛顿，美方对此既没有反对，也没有参与。《华盛顿邮报》引述一名不愿披露身分的以色列负责人报道称，以色列的攻击行动是对4月13日伊朗对以色列发动大规模空袭做出的反击。以色列内塔尼亚胡政府中的极右翼的安全部长伊塔马尔·本-格维尔（Itamar Ben-Gvir）当日在社交媒体X，也就是前推特平台上发帖，似乎默认了伊朗境内的爆炸是以色列所为。但他此番推特发言立即在以色列国内引来众多批评，认为他让以色列蒙羞，也让以色列难以出面否认等等。</p><p>法新社为此联系以色列官方求证，但以色列军方和政府都拒绝对爆炸事件发言。美国白宫也拒绝对此发表评论。这一切都令连日来持续对中东战火扩大深感忧心的国际舆论在不安中，不得不谨慎面对。</p><p><strong>你来我往的报复性打击导致危机不断升级？</strong></p><p>国际社会之所以如此敏感是因为4月13日，伊朗有史以来首次自本土向以色列发动空袭，数百架无人机和导弹飞向以色列，声称是要对伊朗驻叙利亚大马士革使馆4月1日遭遇袭击，并造成包括伊朗革命卫队高阶将领在内的13人丧生事件的报复性打击。伊朗认定大马士革使馆遭遇的袭击是以色列所为，但以色列既未公开承认，也没有否认。但自以色列军队去年十月起对巴勒斯坦激进伊斯兰武装哈马斯10月7日突袭以色列，发起大规模反攻行动以来，伊朗一直被认为在幕后支持包括黎巴嫩真主党在内的中东地区激进伊斯兰武装，侧翼袭击以色列，支持哈马斯，以色列对伊朗目标实施打击的可能性因此不能排除。</p><p>但伊朗4月13日对以色列的空袭行动虽然并未在以色列境内造成重大伤亡或物质破坏，以色列在美欧盟友的协助下，成功拦截了绝大部分袭击飞行物。但以色列内塔尼亚胡政府誓言要对伊朗的报复性反击也做出报复性反击。巴以冲突常年冤冤相报的恶性循环明显出现战火扩大的危险。在俄乌战争已经持续两年有余、加沙走廊的以哈战争持续半年之后始终难以达成一项新的人道停火协议、朝鲜当局常规导弹以及核武器技术不断提升、台海两岸持续紧张、中国与菲律宾在南海也一再紧张对峙的背景下，石油蕴藏丰富的中东地区战事扩大不仅对已经复杂的国际局势增添新的风险，也对新冠疫情后艰难起步又因乌克兰战争而受到干扰的世界经济增添新的不确定因素。</p><p><strong>国际社会同声呼吁克制</strong></p><p>19日伊朗境内的爆炸事件真正原因为何尚不明了，国际社会纷纷发出避免升级的呼吁。正在意大利举行外长会议的七国集团当日呼吁有关各方努力阻止中东战事升级，并明确反对以色列在巴勒斯坦拉法地区发动大规模军事行动。欧盟委员会主席冯德莱恩表示，绝对有必要让中东地区稳定，让各方避免采取任何新的行动。联合国人权事务高级专员署发言人敦促各方采取措施，为当地局势降温，保证当地已经极度困难的形势不再继续恶化。中国外交部发言人林剑一方面表示，中方“反对任何导致局势进一步紧张升级的行为”，另一方面表示，中方会“为缓和地区紧张局势发挥建设性作用”。俄罗斯外长拉夫罗夫则通过俄罗斯媒体向以色列传话，称伊朗不希望两国冲突升级。</p><p>所有这些呼吁是否能降低中东地区紧张情势出现扩大，实在难以预料。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E7%91%9E%E8%BF%AA/" title="瑞迪">瑞迪</a></div></div></div></div>
