--- a/articles/rfi/999960.md
+++ b/articles/rfi/999960.md
@@ -1,5 +1,5 @@
-<!--1713537902000-->
-[阿根廷与北约建立伙伴关系迈出第一步](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5)
+<!--1713552301000-->
+[G7承诺“加强乌克兰的防空力量”](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-g7%E6%89%BF%E8%AF%BA-%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F)
 ------
 
-<div>19/04/2024 - 15:09</div><img src="https://s.rfi.fr/media/display/6f37adba-fe4d-11ee-8194-005056bf30b7/w:1280/p:16x9/le%20secr%C3%A9taire%20g%C3%A9n%C3%A9ral%20d%C3%A9l%C3%A9gu%C3%A9%20Mircea%20Geoan%C4%83re%C3%A7u%20le%20ministre%20argentin%20de%20la%20D%C3%A9fense%20Luis%20Petriau%20si%C3%A8ge%20de%20l%E2%80%99OTAN%2018042024.PNG"><p><strong>北约副秘书长吉瓦纳(Mircea Geoană)4月18日在布鲁塞尔北约总部与阿根廷国防部长佩特里(Luis Petri)会面，双方讨论了北约与阿根廷之间伙伴关系的未来发展方向。        </strong></p><div><p>据北约网站4月19日更新的声明说，北约副秘书长米尔恰-吉瓦纳先生说：“我今天非常高兴地欢迎阿根廷国防部长。阿根廷是拉丁美洲的重要一员，我欢迎该国申请成为北约的合作伙伴。北约正在与世界各国合作，促进和平与稳定。阿根廷和北约都将受益于更密切的政治和务实合作”。</p><p>两位领导人还讨论了欧洲和拉丁美洲面临的安全挑战。北约副秘书长感谢阿根廷向乌克兰提供大量人道主义援助，特别是食品和药品，以及向难民提供的帮助。</p><p>这个声明说，北约与阿根廷的政治对话始于20世纪90年代初。布宜诺斯艾利斯随后为北约领导的波黑和平支援行动做出了贡献。哥伦比亚目前是北约在拉丁美洲的唯一伙伴国。而北约与阿根廷建立任何正式伙伴关系的决定都需要其32个盟国达成共识。</p><p>另据美联社说，阿根廷周四正式申请成为北约的合作伙伴。阿根廷总统米莱（Javier Milei）领导的右翼政府正致力于加强与北约成员国的关系并吸引投资，而这一合作伙伴地位将为加强阿根廷与西方的政治和安全合作扫清道路。</p><p>据介绍，对于那些不在北约地理区域内、无需参加集体军事行动的国家来说，“合作伙伴”是一个比"盟友"更有价值的角色。北约成员国目前仅限于欧洲、土耳其、加拿大和美国。</p><p>阿根廷总统府表示，北约这一指定，可使阿根廷获得以前无法获得的先进技术、安全系统和培训。</p><p>而北约副秘书长吉瓦纳在北约总部说，"阿根廷在拉丁美洲扮演着重要的角色"。双方"更紧密的政治和务实合作将使我们双方受益"。</p><p><strong>阿根廷购买丹麦F-16战机</strong></p><p>据法新社消息，丹麦和阿根廷本周二宣布，丹麦将向阿根廷出售24架二手F-16战斗机，阿根廷称，此次购买是其"过去50年中最重要的军事采购"。</p><p>在阿根廷国防部长佩特里访问丹麦的斯克里德斯特鲁普（Skrydstrup）空军基地期间，双方正式签署了这份军购协议。今年3月份双方公布了该交易的意向声明。</p><p>据丹麦媒体报道，丹麦正在将其机队升级为更现代化的 F-35。丹麦拥有大约40架F-16，其中约 30 架正在服役。丹麦也是北约的创建国之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0W.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E9%2598%25BF%25E6%25A0%25B9%25E5%25BB%25B7%25E4%25B8%258E%25E5%258C%2597%25E7%25BA%25A6%25E5%25BB%25BA%25E7%25AB%258B%25E4%25BC%2599%25E4%25BC%25B4%25E5%2585%25B3%25E7%25B3%25BB%25E8%25BF%2588%25E5%2587%25BA%25E7%25AC%25AC%25E4%25B8%2580%25E6%25AD%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0W.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 19:04</div><img src="https://s.rfi.fr/media/display/00846dda-fe3f-11ee-958f-005056a97e36/w:1280/p:16x9/G7%20ITALY%20APRIL%20A.jpg"><p><strong>七国集团（G7）外长周五表示，在俄罗斯袭击摧毁电力基础设施并造成数百人死亡之后，七国集团决心加强乌克兰的防空能力。        </strong></p><div><p>G7外长们表示，七国集团 "将加强乌克兰的防空能力，以拯救生命和保护重要基础设施"，并补充说他们将增加对基辅的防务和安全援助。</p><p>周五在意大利南部卡普里岛举行的为期三天的部长会议结束时发表了七国集团声明，会议期间讨论的主要问题包括乌克兰问题以及以色列和伊朗之间的军事对抗。据路透社报道，G7外长们补充说，"我们决心继续向乌克兰及其人民提供军事、财政、政治、人道主义、经济和发展支持"。</p><p>G7外长会议结束时，美国国务卿安东尼-布林肯表示，乌克兰急需额外资源，并警告北京，如果中国支持俄罗斯国防工业，将危及中国与欧洲的关系。</p><p>近几个月来，对乌克兰的军事援助已经放缓，欧洲合作伙伴明显缺乏武器弹药，而美国的重要资金在国会被共和党人卡住。</p><p>另一个关键问题是如何利用俄罗斯在西方持有的约3,000 亿美元主权资产的衍生利益来帮助乌克兰，而此时欧盟成员国正对此举的合法性举棋不定。</p><p>七国集团（G7）外长表示，他们将继续探讨如何利用被冻结的俄罗斯资产来帮助乌克兰。</p><p>北约秘书长延斯-斯托尔滕贝格（Jens Stoltenberg）周四在意大利卡普里小岛举行的七国集团外长会议间隙强调，乌克兰"迫切需要增加防空能力"。他向G7外长们说，由于俄罗斯对乌克兰城镇和基础设施的空袭，当地局势"困难重重"，因此"北约成员国保持并加强其支持至关重要"。</p><p>这位北约秘书长表示，他最近注意到北约成员国宣布提供军事援助的"令人鼓舞"的迹象，包括美国众议院预计周六投票通过向基辅提供 610 亿欧元援助的一揽子计划。</p><p>斯托尔滕贝格先生在乌克兰外交事务负责人库列巴（Dmytro Kouleba）应邀参加的乌克兰问题会议前补充道说："我们本应更早地给予他们更多"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3Y.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-g7%25E6%2589%25BF%25E8%25AF%25BA-%25E5%258A%25A0%25E5%25BC%25BA%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E7%259A%2584%25E9%2598%25B2%25E7%25A9%25BA%25E5%258A%259B%25E9%2587%258F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAX3Y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAX3Y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3Y.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
