--- a/articles/rfi/999962.md
+++ b/articles/rfi/999962.md
@@ -1,5 +1,5 @@
-<!--1713532503000-->
-[美国宇航局局长警告：中国利用民用项目掩盖太空军事存在](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A-%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8)
+<!--1713545104000-->
+[德国逮捕2俄间谍计划攻击美军基地](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0)
 ------
 
-<div>18/04/2024 - 16:23</div><img src="https://s.rfi.fr/media/display/c28e1990-fd67-11ee-b1f8-005056a97e36/w:1280/p:16x9/AP23117711747550.jpg"><p><strong>美国宇航局局长比尔·尼尔森 4 月 17 日在华盛顿表达了对中国秘密航天进展的担忧。他警告说，中国通过利用民用项目来掩盖军事目标以增强其太空能力，并警告华盛顿必须保持警惕。         </strong></p><div><p>中国在航空航天领域的进步，尤其是其不透明的做法，令美国宇航局感到担忧。比尔·尼尔森告诉国会山议员，中国对其太空进展“非常非常保密”，并警告“我们正在一场竞赛”。尼尔森怀疑中国的民用太空计划实际上隐藏着军事计划，这凸显了北京缺乏透明度。</p><p>美国宇航局局长比尔·尼尔森在国会山对议员们说：“中国取得了非凡的进步，特别是在过去十年中，但它们非常非常保密。”</p><p>尼尔森说：“我们认为，他们很多所谓的民用太空计划都是军事计划。我认为，实际上，我们正在进行一场竞赛。”</p><p>他说他希望北京能够“清醒过来，明白民用空间是用于和平用途”，但他补充说：“我们还没有看到中国表现出这一点。”</p><p>尼尔森是在众议院拨款委员会就 NASA 2025 年预算作证时发表上述言论的。</p><p>他表示，美国应该在中国之前再次登陆月球，因为两国都在执行月球任务。但他表示担心，如果北京先到达，可能会说：“好吧，这是我们的领土，你别进来。”</p><p>尼尔森此前表示，美国正在与中国“进行太空竞赛”，并警告说，中国最终可能声称“拥有”月球资源丰富的地区。</p><p>2022年，中国航天计划建成了地球轨道空间站，并实施了多次绕月和样本回收任务。</p><p>此后，美国一直计划通过阿耳忒弥斯三号任务在 2026 年将宇航员送回月球。中国表示希望在2030年之前将人类送上月球。</p><p>尼尔森表示，他相信美国不会失去其在太空探索方面的“全球优势”。</p><p>他说美国必须现实一点，因为“中国确实投入了大量资金，他们的预算还有很大的增长空间。“ 但 “我认为我们最好不要放松警惕。”</p><p>据美国国防情报局称，中国目前有 499 颗卫星在轨运行。这个数字是 2019 年的两倍多。中国还正在开发间谍气球和高超音速导弹。</p><p>《阿耳忒弥斯协定》是由美国宇航局和美国国务院起草一项要求太空活动必须出于和平目的的协议，已由包括英国在内的 40 多个国家签署。中国尚未签署这些协议。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWpb.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AE%2587%25E8%2588%25AA%25E5%25B1%2580%25E5%25B1%2580%25E9%2595%25BF%25E8%25AD%25A6%25E5%2591%258A-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2588%25A9%25E7%2594%25A8%25E6%25B0%2591%25E7%2594%25A8%25E9%25A1%25B9%25E7%259B%25AE%25E6%258E%25A9%25E7%259B%2596%25E5%25A4%25AA%25E7%25A9%25BA%25E5%2586%259B%25E4%25BA%258B%25E5%25AD%2598%25E5%259C%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWpb.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/7c78ebe4-fdc4-11ee-a0fd-005056bfb2b6/w:1280/p:16x9/66210160d77c5330d1724475.png"><p><strong></strong></p><div><p>两名嫌犯是在德国东南部的拜罗伊特(Bayreuth)被拘捕的。德国检方18ri 表示，2名德俄双重国籍人士因涉嫌策划在德国进行蓄意破坏攻击而被捕，两人锁定目标包括美国军事设施，目的为了削弱德国对乌克兰的军事支持。</p><p>检察官说，这两名男子的名字仅证实为狄特尔S.（Dieter S.）和亚历山大 J.（Alexander J.）。正在布鲁塞尔开会的德国总理朔尔茨表示，“我们永远不会接受间谍活动在德国发生”。 俄罗斯方面则在其驻德国大使馆在 X 上发布的消息，谴责这种“荒唐可笑”以及缺乏“证据”的指控。</p><p>据《明镜周刊》报道，嫌疑人以及德国联邦国防军车队尤其关注巴伐利亚美军格拉芬沃尔(Grafenwöhr)基地，乌克兰士兵在那里接受使用美国艾布拉姆斯主战坦克的训练。</p><p>据《明镜周刊》报道，主嫌犯迪特尔·S. (Dieter S.) 现年 39 岁，自 2023 年 10 月以来一直在与一名与俄罗斯情报部门有联系的人员交换信息，以期在德国领土上实施可能的破坏活动。 据检方称，他的同伙亚历山大·J.(Alexander J.)现年 37 岁，从 2024 年 3 月底开始和迪特尔有密切的联系。</p><p>检察官称，“这些行动的目的尤其是破坏德国对乌克兰对抗俄罗斯侵略战争的军事支持”。 据报道，迪特·S. 声称自己准备好“对德国的军事基础设施和工业场所进行爆炸袭击和纵火袭击”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt3.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E5%25BE%25B7%25E5%259B%25BD%25E9%2580%25AE%25E6%258D%25952%25E4%25BF%2584%25E9%2597%25B4%25E8%25B0%258D%25E8%25AE%25A1%25E5%2588%2592%25E6%2594%25BB%25E5%2587%25BB%25E7%25BE%258E%25E5%2586%259B%25E5%259F%25BA%25E5%259C%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt3.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
