--- a/articles/rfi/999963.md
+++ b/articles/rfi/999963.md
@@ -1,5 +1,5 @@
-<!--1713532502000-->
-[美国宇航局长揭露中国以民用计划之名掩盖军事太空计划 - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240419-%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E9%95%BF%E6%8F%AD%E9%9C%B2%E4%B8%AD%E5%9B%BD%E4%BB%A5%E6%B0%91%E7%94%A8%E8%AE%A1%E5%88%92%E4%B9%8B%E5%90%8D%E6%8E%A9%E7%9B%96%E5%86%9B%E4%BA%8B%E5%A4%AA%E7%A9%BA%E8%AE%A1%E5%88%92)
+<!--1713545102000-->
+[在美国，“中国钢铁危害成了竞选的一个招式” - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240418-%E5%9C%A8%E7%BE%8E%E5%9B%BD%EF%BC%8C-%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%B1%E5%AE%B3%E5%B7%B2%E6%88%90%E4%B8%BA%E7%AB%9E%E9%80%89%E7%9A%84%E4%B8%80%E4%B8%AA%E6%8B%9B%E5%BC%8F)
 ------
 
-<div>19/04/2024 - 14:34</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>法国总理阿塔尔任职100天，周四晚间做客24小时滚动新闻台BFMTV，详细阐述了任职后的作为，并承诺将对一些年轻人的“暴力”行为迅速做出反应；欧洲选举日益迫近，法国北部一些地区的民众却漠不关心；乌克兰向国际社会发出紧急救援的呼声；欧洲电动汽车销售遇挫，三月份下滑11%，中国竞争威胁迫在眉睫；这是19日出版的法国各报开篇新闻话题。                    </strong></p><div><p>关于中国，《费加罗报》揭示美国宇航局局长为中国的太空军事能力拉响警钟；《回声报》则报道了中国奇瑞汽车在西班牙建厂的消息。另外，印度迎来全球规模最大的选举，则是多份日报关注的亚洲新闻重点。</p><p><strong>尼尔森为中国的太空军事能力拉响警钟</strong></p><p>美国宇航局局长尼尔森星期三（4月17日）在众议院拨款委员会针对航天局2025年预算发言，对中国近年来在太空领域取得的巨大进步深表担忧。尼尔森指责中国继续增强其太空能力，并以民用计划的名义掩盖军事太空计划。美国宇航局局长强调：美中之间目前正在进行一场“竞赛”，美国必须先于中国成功登陆月球。因为他担心：一旦中国率先登陆，则可能宣称“月球为其领土”。尼尔森表示：中国在这方面投入了大量资金。美国“真的不应该放松警惕”。</p><p>美国计划于2026年通过阿尔忒弥斯3号任务将宇航员送上月球。</p><p>中国也计划在2030年之前将人类送往月球。美国民选官员在向美国航天局提出年度预算请求期间听取了尼尔森的表述。</p><p><strong>中国奇瑞在巴塞罗纳建厂</strong></p><p>另外，欧洲电动汽车市场出现低迷，随着各国收紧电动车补贴政策，3月份欧洲电动汽车销售下降11%。与此同时，中国奇瑞新能源星期二（4月16日）宣布：与西班牙埃布罗（Ebro-EV Motors）公司在巴塞罗纳成立一家合资企业，厂址选在2021年底关闭的前日产汽车旧址，计划将工厂改造为电动汽车中心。</p><p>《回声报》指出：中国奇瑞新能源加速进军欧洲，希望在欧洲发展销售业务，成为第一家在欧洲设厂的中国电动汽车企业。</p><p>这家由西班牙埃布罗占多数股权的合资企业承诺，在现有基础设施再利用的基础上，将于今年第四季度末开始生产。</p><p>报道指出：通过在欧洲建厂，奇瑞公司面临巨大挑战。这家原本注重低端市场的制造商，打算推出新的品牌重塑形象。同时为了更快地在激烈的竞争中找到一席之地，奇瑞准备以极具吸引力的价格打响市场争夺战。</p><p><strong>印度：最大规模的选举</strong></p><p>此外，多份日报聚焦今天开始的印度议会下院选举。报道指出：全球最大规模的选举-印度议会下院选举19日正式拉开帷幕。公众舆论和观察家一致认为：即将卸任的总理穆迪领导的印度人民党将赢得多数席位。根据3月6日公布的民意调查，75%的选民对穆迪表示支持。随着第二个五年任期的结束，穆迪的民意支持率一年内跃升了8个百分点。</p><p>不过，印度总理治理工作中也存在诸多不足。比如：在新冠病毒大流行期间显露出管理不善，导致印度成为全球受该病毒影响最严重的国家，死亡人数超过400万。还有，在中印两国军队在喜马拉雅山西部的冲突中表现不力，未能有效地阻止中国军队占领大片富有争议的边境地带。</p><p>从经济层面看，尽管印度年增长率约为7%，但失业和就业不足仍是印度面临的最大挑战。国际劳工组织在3月份公布的一份报告中强调，2012至2022十年间，印度经济每年仅能为进入就业市场的1200万年轻人创立500万个就业机会。这场社会危机每年迫使超过10万民众非法移民。</p><p>印度总理穆迪执政十年还广得民心，是他以人民的无私公仆的形象维持的声望。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%B5%81%E8%8A%B3/" title="流芳">流芳</a></div></div></div></div>
+<div>19/04/2024 - 00:47</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。                    </strong></p><div><p>周四法国世界报发表的一篇文章表示，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。</p><p>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。顺便，拜登也对被唐纳德·特朗普的演讲给打动了的工人阶级发起了新的魅力攻势。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。</p><p>相关的文章写道，在20世纪70年代之前，宾夕法尼亚州的匹兹堡，是让美国国家工业变得伟大的一个地方，随后，却遭受了去工业化的蹂躏，可以说是美国“铁锈带”的核心。4月17日星期三，美国总统选择了匹兹堡这个“铁锈带”的核心地点，对中国钢铁倾销发起了攻击，同时，也对受到特朗普在美国总统选举的摇摆州所发表的演讲所迷惑的工人阶级，发起了新的魅力攻势。乔·拜登当天在钢铁工人工会的总部宣布，他希望对从中国进口的钢铁和铝所征收的税率是如今的三倍，目前的税率是7.5%。中国的钢铁产量占世界的近一半，存在巨大的产能过剩，中国钢铁基本产品的价格只有美国钢铁制造商的一半，以钢铁为基础的中国工业制品如汽车、风力涡轮机等充斥着市场。白宫坚称，这一切还对碳排放的减少，非常不利。</p><p>美国总统拜登在X社交网络上宣称：“我希望与中国竞争，而不是冲突。”拜登还向钢铁工人工会重申了他希望工会能够参与到捍卫“美国制造”的行动中去。同时，拜登还反对将美国钢铁公司出售给日本的新日铁公司，拜登表示，“一个多世纪以来”，美国钢铁公司都是一个“标志性公司”，它“必须继续是一个美国公司”。拜登还表示，像特朗普一样，他已经做好了准备，制止美国联邦外国投资委员会目前正在审查的这项售卖行动。</p><p><strong>持续性的、全方位施压</strong></p><p>法国世界报的文章表示，自2016年以来，中国钢铁的危害已成为了美国竞选活动中的一个招式。在拜登的作为总统候选人所发表的有关日本和中国的演讲中，不乏机会主义，甚至是厚颜无耻。诚然，新日铁是日本公司，但日本是美国坚定不移的盟友。至于中国的钢铁威胁，如果我们相信美国人口普查局的数据的话，那么，是不存在中国钢铁威胁的：因为，根据美国人口普查局的数据，美国进口的中国钢铁很少，只占其采购量的3%；美国钢铁协会的数据甚至显示，中国钢铁在美国钢铁采购中只占2.1%！</p><p>但是，华盛顿决定对中国施加永久性的、全方位的压力。与“芯片之战”相比，“钢铁之战”根本不算什么。华盛顿以国家安全的为名，正在尽一切努力、包括对其盟友施加压力，以便让北京没有可能来获得最新一代的电子芯片。</p><p>拜登指责习近平把先进的芯片用于“错误的地方”。习近平则认为，用的地方很对：是为了让中国在2050年成为世界领先的经济、科技和军事强国。</p><p>中国梦是美国的噩梦。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div>
