--- a/articles/rfi/999968.md
+++ b/articles/rfi/999968.md
@@ -1,5 +1,5 @@
-<!--1713494701000-->
-[菲美肩并肩军演实弹击沉中国造退役军舰](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240418-%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0)
+<!--1713541502000-->
+[印度大选启动投票，莫迪能否蝉联第三任期6月初见分晓](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240419-%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93)
 ------
 
-<div>18/04/2024 - 16:23</div><img src="https://s.rfi.fr/media/display/0e6b372e-e821-11ed-8ba9-005056a90284/w:1280/p:16x9/2023-04-29T210724Z_124636285_RC2BMW9Q52NU_RTRMADP_3_USA-PHILIPPINES.JPG"><p><strong>当地时间 4 月 22 日至 5 月 8 日，美国和菲律宾将举行本年度“肩并肩”联合军事演习，此次演习可能有多达 1 万 7 千人参加，主要有来自美国、菲律宾、澳洲和法国的武装部队。消息称，在“击沉演习”部分，演习击沉目标选定为退役的菲律宾海军补给舰“卡里拉亚湖”号，而此舰原是中国制造、菲律宾企业所使用的民用油船，是菲律宾唯一的“中国造海军资产”。        </strong></p><div><p>据新头壳今天引述中媒《观察者网》今（18）日消息，负责此次演习的菲律宾陆军上校和发言人洛吉科（Michael Logico）近期在记者会上公布，此次演习将创造诸多“第一”，除了人数创下历年最高，菲律宾海岸警卫队（PCG）也将首次参加演习，演习还将首次在菲律宾 12 海里领海以外展开，并将模拟“夺回被敌对势力占领的岛屿”等场景。另外在“击沉演习”部分，演习击沉目标选定为退役的菲律宾海军补给舰“卡里拉亚湖”号。</p><p>据该消息，值得注意的是，这艘军舰原是中国制造、菲律宾企业所使用的民用油船，是菲律宾唯一的“中国造海军资产”。对此菲军坚称，此举“并非有意为之”，这不代表向特定国家发出信号。洛吉科强调，这场联合军演不针对任何外国，包括中国。</p><p>此次演习还有另一个重点“后勤演习”，包括测试空运美国海军标准 6 型（SM-6）防空导弹系统的可行性。</p><p>今年“肩并肩”演习将有至少 1 万 6 千人一同参与，其中包括 1 万 1 千名美军士兵和 5 千名菲律宾武装部队士兵，其余人则将来自法国海军和澳洲国防军。这一总人数预计将超过去年的 1 万 6 千人，去年的参演人员主要来自美军和菲律宾武装部队。</p><p>该报引述洛吉科称，包括东盟、欧盟和日本在内的其他 14 个国家和组织，将针对演习派出“观察员”。洛吉科补充，今年演习将测试菲律宾武装部队与外国部队的“互操作性”，这一概念是由菲律宾国防部长特奥多罗（Gilberto Teodoro）提出，特奥多罗声称，这将使菲律宾武装部队从内部防御转向外部防御，或者从打击当地叛乱转向打击外国敌人。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWpZ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240418-%25E8%258F%25B2%25E7%25BE%258E%25E8%2582%25A9%25E5%25B9%25B6%25E8%2582%25A9%25E5%2586%259B%25E6%25BC%2594%25E5%25AE%259E%25E5%25BC%25B9%25E5%2587%25BB%25E6%25B2%2589%25E4%25B8%25AD%25E5%259B%25BD%25E9%2580%25A0%25E9%2580%2580%25E5%25BD%25B9%25E5%2586%259B%25E8%2588%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0%20-%20https%3A%2F%2Frfi.my%2FAWpZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0%20-%20https%3A%2F%2Frfi.my%2FAWpZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWpZ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 14:11</div><img src="https://s.rfi.fr/media/display/0606e2ba-fe30-11ee-9710-005056bfb2b6/w:1280/p:16x9/2024-04-19T075100Z_1586901846_RC2F97A5NAJV_RTRMADP_3_INDIA-ELECTION.JPG"><p><strong>印度大选19日起陆续在全国各地展开，一直持续到6月1日。9亿多选民将选出543名国会下院议员。从目前情况看，已经连续两届总理任期的莫迪身后的人民党有望再次在国会获得多数席位，让莫迪蝉联第三任期。        </strong></p><div><p>印度全国大选被看作是全球规模最大的投票活动。全国有9亿6千800万选民，超过美国、欧洲联盟以及俄罗斯合计总人口。投票活动全程历时一个多月，分七个阶段进行。检票活动在6月4日才全面展开。通常情况下，结果当天即可揭晓。</p><p>恒河沿岸重要朝圣城市赫里德瓦尔（Haridwar）是首批启动投票的地区之一。总理莫迪当天向选民，尤其是年青选民发出呼吁，希望他们踊跃投票。</p><p>最大反对党、曾常年把持政权的国大党也同天呼吁选民投票，以便“告别通货膨胀，告别失业，告别仇恨，告别不公”。</p><p>从目前情况来看，已经73岁的现任总理莫迪有望再次获胜，蝉联第三个任期。美国独立民调机构皮尤研究中心2023年的一项调查显示，担任总理已经近十年的莫迪仍然享有近80%的民意支持。</p><p>十年间，印度在莫迪领导下在国际舞台影响力提升，并跃居世界第五大经济体。在中美两大国全面战略竞争的背景下，印度成为西方国家无论是战略部署，还是企业投资，竞相争取的对象。</p><p>但莫迪任下的印度也越来越远离西方国家的民主标准。莫迪大力助长了印度教民族主义势力，引发国内不同宗教信仰族群间的紧张关系。在这次投票活动启动前不久，莫迪还亲自出席了一座供奉印度教神灵的寺庙的落成典礼。而这所寺庙修建在被印度教狂热分子摧毁的一座有数千年历史的清真寺地址上。</p><p>莫迪政府也加强了对反对声音的打压。许多反对派人士或者遭遇犯罪调查，或者被关入监狱。今年2月，国大党的银行账户被金融监管部门冻结。反对派各政党试图联合抗衡的努力看来效果不彰，到目前为止尚没有推出可能出任总理的人选。</p><p>国际非政府团体“无疆界记者”组织的报告认为，莫迪2014年上台以来，印度在新闻自由度年度排行中倒退了21位，在180个国家和地区中排行第161。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWzM.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240419-%25E5%258D%25B0%25E5%25BA%25A6%25E5%25A4%25A7%25E9%2580%2589%25E5%2590%25AF%25E5%258A%25A8%25E6%258A%2595%25E7%25A5%25A8%25EF%25BC%258C%25E8%258E%25AB%25E8%25BF%25AA%25E8%2583%25BD%25E5%2590%25A6%25E8%259D%2589%25E8%2581%2594%25E7%25AC%25AC%25E4%25B8%2589%25E4%25BB%25BB%25E6%259C%259F6%25E6%259C%2588%25E5%2588%259D%25E8%25A7%2581%25E5%2588%2586%25E6%2599%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWzM.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
