--- a/articles/rfi/999975.md
+++ b/articles/rfi/999975.md
@@ -1,5 +1,5 @@
-<!--1713444302000-->
-[政客报透露中国秘密与美国国会讨论TikTok 有疑适得其反](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BA%E6%8A%96%E9%9F%B3-%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D)
+<!--1713498301000-->
+[赖清德5.20前 台湾国民党议员前赴后继去中国表“善意”但拆台](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240418-%E8%B5%96%E6%B8%85%E5%BE%B75-20%E5%89%8D-%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8-%E5%96%84%E6%84%8F-%E4%BD%86%E6%8B%86%E5%8F%B0)
 ------
 
-<div>18/04/2024 - 12:14</div><img src="https://s.rfi.fr/media/display/8bfd6d7e-e181-11ee-9af3-005056a97e36/w:1280/p:16x9/2024-03-13T141117Z_179367349_RC2VA1AM24NU_RTRMADP_3_USA-TIKTOK-CONGRESS.JPG"><p><strong>两名美国国会山工作人员表示，中国大使馆已与国会工作人员举行会议，游说反对强制出售 TikTok 的立法。中国外交派驻似乎没有否认此一消息。TikTok曾派出高管新加坡人周受资在美国国会接受质询，明确称TikTok与中国官方没有任何关系。但美国议员称，中国使馆的动作恰恰表明TikTok对中国官方很重要。        </strong></p><div><p>据POLITICO报道称，中国外交官正在悄悄与美国国会工作人员会面讨论 TikTok。</p><p>在众议院通过一项强制出售该公司的法案后，中国大使馆的外交官与美国国会办公室会面，推动捍卫该应用程序。</p><p>总部位于北京的字节跳动公司旗下的 TikTok 一再否认与中国政府有关系，并试图与在中国母公司保持距离。但现在，由于强制出售该公司的立法在参议院面临着不确定的前景，中国大使馆似乎正在利用中国政治影响力来保护TikTok公司在美国的未来。</p><p>美国国会工作人员表示，与美国国会工作人员的会面是由中国大使馆在外展活动中发起的，最初并未提及 TikTok，其中一名人员在众议院工作，另一名在参议院工作，他们被要求匿名讨论他们所讨论的对话。未获授权公开透露。这些会议是在众议院三月份以压倒性多数投票支持《保护美国人免受外国对手控制应用程序侵害法案》之后举行的，该法案将迫使字节跳动出售 TikTok。</p><p>此外，据第三位工作人员（一位被联系的民主党参议院助手）透露，在另一次安排会面的电话中，一名中国大使馆官员表示，中国大使有兴趣讨论众议院的 TikTok 法案等问题。</p><p>两名工作人员表示，大使馆在两次会议上都淡化了对 TikTok 的美国国家安全担忧，并寻求将该应用程序与美国利益保持一致：在一次会议上，中国大使馆表示对 TikTok 的禁令将损害持有字节跳动部分股权的美国投资者。另一方面，中国大使馆强调并非所有字节跳动董事会成员都是中国公民。</p><p>美国国会工作人员表示，尽管 TikTok 公开努力与其创始人的出身保持距离，但中国大使馆还试图声称该公司是中国公司。与字节跳动不同，TikTok 的总部位于新加坡和美国。据众议院工作人员称，在一次会议上，中国大使馆辩称该立法相当于强制传输一家中国公司的数据。另一方面，据美国参议院工作人员称，中国大使馆认为这一努力对中国公司不公平，因为美国不会以同样的方式对待不同国籍的公司。</p><p>TikTok 在一份声明中表示，中国大使馆参与会议“对我们来说是新闻，要求我们对我们一无所知的匿名消息来源发表评论是荒谬的”。TikTok 发言人亚历克斯·豪雷克 (Alex Haurek) 表示：“自该法案提出以来，我们一直公开表达反对该禁令法案的原因。” “这份所谓的报道没有通过事实证实，Politico 发表它是不负责任的。”</p><p>据Politico称，不过，中国大使馆并未否认举行过这些会议。中国使馆发言人刘鹏宇在一份声明中表示，“中国驻美国使馆试图向美国各界人士讲清TikTok问题的真相。”刘鹏宇说，“这不是为某一家公司游说，”该发言人补充道，“而是关于是否所有中国公司都能得到公平对待。”</p><p>该声明接着重申了美国国会工作人员所说的在会议上提出的一些论点，包括反驳美国国家安全担忧，以及强调对字节跳动的国际投资。</p><p>中国使馆声明还强调，尽管TikTok的运营合法，但美国“已想方设法动用国家力量对其进行打压”。</p><p>据Politico，TikTok 已经武装了数十名游说者，并花费了数百万美元来反驳华盛顿有关该公司的言论，该应用程序的反对者一再辩称，它是中国影响美国情绪的强大工具。该公司还花费了数百万美元进行广告，以争取公众对这项立法的支持，并通过推送警报来利用其消费者基础，使该应用程序的用户可以轻松地致电国会。保守派的增长俱乐部（Club for Growth）是一个由字节跳动主要投资者杰夫·亚斯（Jeff Yass）部分资助的政治拥护团体，也敦促立法者推动这项法案。</p><p>由于美国参议院仍处于僵局，影响国会办公室的广泛努力最终可能会成功。参议院商务委员会主席参议员玛丽亚·坎特韦尔（华盛顿州民主党人）一直在与其他办公室就该法案的措辞进行谈判，以巩固法案法律地位。众议院法案的支持者、中国共产党特别委员会主席迈克·加拉格尔（威斯康星州共和党人）将于本月离开众议院。预计强制出售 TikTok将被纳入众议院议长迈克·约翰逊周三发布的一系列有关外国援助和外国对手的法案中。</p><p>外交官的游说活动在很大程度上不被公众所知，因为它们通常不受外国影响美国政治行为透明度规则的涵盖。曾在司法部负责外国影响力法执行工作的戴维·劳夫曼 (David Laufman) 表示，《外国代理人登记法》包括明确豁免某些大使馆官员的条款。</p><p>一位参加与中国官员会面的美国国会工作人员指出，中国大使馆此前也曾试图对抗美国针对另一家中国科技公司华为的行动。</p><p>在公开场合，中国也批评国会针对 TikTok 采取的行动。美国众议院法案通过后，中国外交部表示，该法案“使美国站在了公平竞争原则和国际贸易规则的错误一边”。</p><p>美国外交政策委员会印度太平洋研究高级研究员迈克尔·索博利克认为，中国大使馆游说活动的曝光反而凸显了将 TikTok 与其中国母公司分开的必要性。</p><p>索博利克说，“中国外交官这一次帮了美国一个忙。” 索博利克是有关美中关系的书《反击中国的大博弈》的作者。索博利克说，“通过游说美国国会工作人员保护 TikTok 与字节跳动的关系，（中华人民共和国）官员揭示了 TikTok 对中国共产党的价值。失去对该应用程序的控制，将削弱北京针对美国人行为最有力的武器。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWmF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E6%2594%25BF%25E5%25AE%25A2%25E6%258A%25A5%25E9%2580%258F%25E9%259C%25B2%25E4%25B8%25AD%25E5%259B%25BD%25E7%25A7%2598%25E5%25AF%2586%25E4%25B8%258E%25E7%25BE%258E%25E5%259B%25BD%25E5%259B%25BD%25E4%25BC%259A%25E8%25AE%25A8%25E8%25AE%25BA%25E6%258A%2596%25E9%259F%25B3-%25E6%259C%2589%25E7%2596%2591%25E9%2580%2582%25E5%25BE%2597%25E5%2585%25B6%25E5%258F%258D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D%20-%20https%3A%2F%2Frfi.my%2FAWmF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D%20-%20https%3A%2F%2Frfi.my%2FAWmF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWmF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 16:56</div><img src="https://s.rfi.fr/media/display/218be9b6-5261-11ee-b729-005056a90321/w:1280/p:16x9/AP23235304939235.jpg"><p><strong>台湾各种立场媒体均聚焦国民党立委傅崐萁将率领党内立委访问中国，该团人数透露为20人。此前，台湾立法院国民党团被抓包作弊匿名顶替不在场议员卢县一投票，曝出卢县一当天人在中国秘密行踪。再此前，消息传台湾立法院长国民党人韩国瑜被邀请组团前往中国访问。再再此前，多家消息称，马英九后台湾另一国民党政治大佬或要访问中国。这些互动被冠以民间善意促进沟通。但此善意也被怀疑是对赖清德5.20任职拆台破坏，吃里扒外。        </strong></p><div><p>据上报消息，国民党立委傅崐萁将率领党内立委访问中国，国民党文传会主委李彦秀昨天表示此行程由傅崐萁个人规划并安排，不过国民党今天（18日）澄清，傅崐萁等人访中行程将针对台湾人民关心的两岸民生经济议题，进行充分沟通与交流，并反映多数台湾民意期望两岸和平交流的心声，维系两岸人民的利益与福祉。</p><p>国民党指出，傅崐萁于今年2月开始联系访中事宜，国民党乐见国会同志肩负起维系两岸民间良善对话的责任，也对于台湾人民关心的农渔产品行销、旅游观光等民生经济议题，与对岸进行协调与讨论，期望达到让两岸人民互惠双赢的目标。</p><p>据国民党强调，向来支持与对岸维系正常公开的交流与沟通，相信唯有增进两岸良性互动与累积善意，才能让台海免于战争的危险边缘，促进区域的和平稳定。</p><p>据新头壳消息，台湾立法院司法及法制委员会今天并案审查《刑法》加重虐童刑责等10案，邀请蔡碧仲等人列席报告并备质询。吴思瑶质询提问，上周五在立院表决时发生投票舞弊事件，当天卢县一出访中国，未至立院出席、签到，却有表决纪录；若此案进入地检署侦查或法院审理，应该会请相关当事人过去询问，包括议事人员、涉及立委等。</p><p>台湾没有消息提及卢县一前往中国事宜。是公干还是私事，一无所知。</p><p>据新头壳稍早消息，继马习二会后，中国再度出招？据媒体透露，北京当局除了规划由国民党团总召傅崐萁组团访中后，在立院8月休会时，将邀请立法院长韩国瑜组团出访，将由中国人大委员长赵乐际亲自接待。</p><p>国民党立院党团总召傅崐萁近日将率20多名蓝委访问中国，由于时程仍在立院开议期间，遭外界批评是“薪水小偷”，国民党中央日前记者会更切割，强调行程内容党中央并不知情。</p><p>民进党团干事长吴思瑶进一步说好奇，责问傅崐萁这次带队率领蓝委去中国，到底是谁的授权？又是代表谁？</p><p>台湾媒体没有提及国民党议员前往中国是受国台办还是受中国人大邀请。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWq1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240418-%25E8%25B5%2596%25E6%25B8%2585%25E5%25BE%25B75-20%25E5%2589%258D-%25E5%258F%25B0%25E6%25B9%25BE%25E5%259B%25BD%25E6%25B0%2591%25E5%2585%259A%25E8%25AE%25AE%25E5%2591%2598%25E5%2589%258D%25E8%25B5%25B4%25E5%2590%258E%25E7%25BB%25A7%25E5%258E%25BB%25E4%25B8%25AD%25E5%259B%25BD%25E8%25A1%25A8-%25E5%2596%2584%25E6%2584%258F-%25E4%25BD%2586%25E6%258B%2586%25E5%258F%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0%20-%20https%3A%2F%2Frfi.my%2FAWq1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0%20-%20https%3A%2F%2Frfi.my%2FAWq1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWq1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
