--- a/articles/rfi/999976.md
+++ b/articles/rfi/999976.md
@@ -1,5 +1,5 @@
-<!--1713444302000-->
-[澳大利亚遭袭主教称原谅袭击者](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240418-%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E9%81%AD%E8%A2%AD%E4%B8%BB%E6%95%99%E7%A7%B0%E5%8E%9F%E8%B0%85%E8%A2%AD%E5%87%BB%E8%80%85)
+<!--1713494701000-->
+[所罗门群岛反对派总理角逐者重申若当选将废除与中国的安全协议](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240418-%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE)
 ------
 
-<div>18/04/2024 - 11:37</div><img src="https://s.rfi.fr/media/display/0d85d88e-92d5-11ec-8d6f-005056a90321/w:1280/p:16x9/AP21260023686049.jpg"><p><strong>澳大利亚悉尼一名在教堂做礼拜时被刺伤的亚述教会主教今天表示，他已经原谅了袭击他的人。该主教正在迅速康复。与此同时，该国警方加大对主教刺伤后引发的骚乱的调查力度，当局将此案定性为恐袭。        </strong></p><div><p>澳大利亚三天内发生的两起持刀袭击事件：周六发生在邦迪海滩附近一个繁忙的购物中心，造成六人死亡；周一发生在悉尼西部的亚述基督好牧人教堂，令澳大利亚人口最多城市的悉尼居民感到震惊。</p><p>马尔·马里·伊曼纽尔主教在社交媒体上发布的音频消息中说：“我现在很好，恢复得很快，没有必要为我担心。”这是他在袭击发生后首次发表公开评论。 “我原谅任何做出这种行为的人。我将永远为你祈祷，无论是谁派你做这一刺杀，我也原谅他们。”</p><p>伊曼纽尔主教在 TikTok 上拥有大量年轻人追随者，他曾在布道中批评同性恋、新冠疫苗接种和伊斯兰教，他在这次袭击中受伤，这起袭击被视为可疑的宗教极端主义动机的恐怖行为。</p><p>据路透社今天报道称，一名男性青少年因袭击主教而被捕。</p><p>当时，愤怒的人群却在教堂外与急救人员发生冲突，示威者要求将嫌疑袭击者交给他们。</p><p>新南威尔士州警察局长凯伦·韦伯 (Karen Webb) 表示，一名 19 岁男子因参与骚乱而受到指控，他不是教会成员。韦伯在新闻发布会上说，“人们大批参加骚乱。这是可耻和令人恶心的。”</p><p>更多侦探已被派去调查这场骚乱，这场骚乱造成约 50 名警察受伤，20 辆警车受损。</p><p>伊曼纽尔主教在讲话中敦促会众保持冷静并尊重法律。</p><p>警方调查继续时，悉尼邦迪购物中心于周四重新开放，允许里面的人们向遇难者表示哀悼，商店仍然关闭，二楼摆放着白色鲜花悼念。预计企业将从周五开始恢复交易。当地议会市长保拉·马塞洛斯 (Paula Masselos) 告诉美国广播公司 (ABC) 电视台：“我们从震惊到难以置信，再到现在的悲伤，人们需要相当长的时间才能治愈心痛。”</p><p>她说，本周日还将举行烛光守夜活动，鲜花和花束将堆放在临时纪念碑前。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWld.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%25BE%25B3%25E5%25A4%25A7%25E5%2588%25A9%25E4%25BA%259A%25E9%2581%25AD%25E8%25A2%25AD%25E4%25B8%25BB%25E6%2595%2599%25E7%25A7%25B0%25E5%258E%259F%25E8%25B0%2585%25E8%25A2%25AD%25E5%2587%25BB%25E8%2580%2585&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E9%81%AD%E8%A2%AD%E4%B8%BB%E6%95%99%E7%A7%B0%E5%8E%9F%E8%B0%85%E8%A2%AD%E5%87%BB%E8%80%85%20-%20https%3A%2F%2Frfi.my%2FAWld.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E9%81%AD%E8%A2%AD%E4%B8%BB%E6%95%99%E7%A7%B0%E5%8E%9F%E8%B0%85%E8%A2%AD%E5%87%BB%E8%80%85%20-%20https%3A%2F%2Frfi.my%2FAWld.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWld.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E9%81%AD%E8%A2%AD%E4%B8%BB%E6%95%99%E7%A7%B0%E5%8E%9F%E8%B0%85%E8%A2%AD%E5%87%BB%E8%80%85&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 22:49</div><img src="https://s.rfi.fr/media/display/a21e0674-fcaf-11ee-8e20-005056bfb2b6/w:1280/p:16x9/AP24106049916145.jpg"><p><strong></strong></p><div><p>中国资助了多个重大项目，包括一座可容纳一万个座位的体育场和一座仍在建设中的医疗中心。</p><p>61 岁的罗伯特·巴拉 (Robert Bara) 住在首都附近一个泥泞的山谷里的村庄里，他担心没有足够的钱送孩子们上学。 他在前往一座用作投票站的教堂投票时说道：“我必须在经济上支持他们”。</p><p>组织这样的投票对这个群岛来说是一个挑战，这个拥有约 72 万居民的国家分布在数百个火山岛屿和环礁上，投票箱和选票是通过船只、飞机和直升机运送的。</p><p>来自澳大利亚、新西兰和巴布亚新几内亚的警察协助当地执法。</p><p>为了应对可能发生的暴力事件，位于霍尼亚拉市中心的中国大使馆本周在大楼前匆忙竖起了临时钢栅栏。</p><p>这是所罗门群岛自2019年与台湾断绝外交关系以来的首次选举。</p><p>所罗门群岛在总理玛纳西·索加瓦雷 (Manasseh Sogavare) 2019年上台，将所罗门群岛的外交关系从台湾转向北京。索加瓦雷于 2022 年与北京签署了一项秘密安全协议。</p><p>尽管该协议的细节仍不清楚，但华盛顿和堪培拉担心它将为中国在南太平洋建立永久性军事基地奠定基础，这可能会改变地区安全的游戏规则。</p><p>玛纳西·索加瓦雷的主要竞争对手之一是前联合国律师彼得·凯尼洛里，他希望挑战与中国的协议。 其他反对派人物包括人权活动家马修·韦尔和前总理、经济学家戈登·达西·利洛。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt8.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E7%25BE%25A4%25E5%25B2%259B%25E5%258F%258D%25E5%25AF%25B9%25E6%25B4%25BE%25E6%2580%25BB%25E7%2590%2586%25E8%25A7%2592%25E9%2580%2590%25E8%2580%2585%25E9%2587%258D%25E7%2594%25B3%25E8%258B%25A5%25E5%25BD%2593%25E9%2580%2589%25E5%25B0%2586%25E5%25BA%259F%25E9%2599%25A4%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E7%259A%2584%25E5%25AE%2589%25E5%2585%25A8%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWt8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWt8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt8.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
