--- a/articles/rfi/999979.md
+++ b/articles/rfi/999979.md
@@ -1,5 +1,5 @@
-<!--1713444302000-->
-[巴勒斯坦再次要求联合国接纳其会员国地位 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240418-%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E5%86%8D%E6%AC%A1%E8%A6%81%E6%B1%82%E8%81%94%E5%90%88%E5%9B%BD%E6%8E%A5%E7%BA%B3%E5%85%B6%E4%BC%9A%E5%91%98%E5%9B%BD%E5%9C%B0%E4%BD%8D)
+<!--1713494701000-->
+[菲美肩并肩军演实弹击沉中国造退役军舰](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240418-%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0)
 ------
 
-<div>18/04/2024 - 13:15</div><img src="https://s.rfi.fr/media/display/e2ae9be6-3b5d-11ed-99f8-005056a9a7b9/w:1280/p:16x9/2022-09-23T155722Z_818034669_RC23NW9N0NOM_RTRMADP_3_UN-ASSEMBLY.JPG"><p><strong>以哈冲突爆发已超过半年，在以色列继续对加沙地带展开猛烈攻势的背景下，联合国安理会周四举行会议，要求其接纳新会员国委员会审查巴勒斯坦权力机构成为联合国正式会员国申请，并对相关决议草案进行投票。这是对巴勒斯坦权力机构于4月初提出的相关要求做出的回应。                    </strong></p><div><p>巴勒斯坦曾在2011年向联合国提交获得该机构正式会员国资格的申请。尽管获得了148个国家的支持，成为联合国正式成员国的愿望却落了空。2012年，联合国大会投票后，巴勒斯坦与梵蒂冈一样晋升为“非会员观察员国”地位。</p><p>13年后的今天，一直担任巴勒斯坦驻联合国大使的里亚德-曼苏尔（Riyad Mansour）再次提交要求承认巴勒斯坦主权国家以及巴勒斯坦获得联合国正式成员国的诉求。这一诉求来自总部设在拉姆安拉的巴勒斯坦权利机构及其主席马哈茂德-阿巴斯。</p><p>巴勒斯坦权力机构位于部分被以色列占领的西岸地区；不过哈马斯2007年掌权后，巴勒斯坦权力机构的治理被逐出加沙地带。</p><p>去年10月，哈马斯在当地发起的突然袭击以及以色列国防军对加沙地带的大规模军事行动，引发了全球的愤怒，改变了整体局势。巴勒斯坦驻联合国特使表示：巴勒斯坦的要求只是与其他民族和国家一样，在国际社会中占据应有的地位。目前已有超过3万3千名巴勒斯坦人在以色列对加沙的战争中丧生，被围困的巴勒斯坦领土大部分地区处于几近饥荒的状态。</p><p>4月2日，曼苏尔代表阿巴斯致函联合国秘书长古特雷斯，要求他“重新关注”巴勒斯坦2011年提出的联合国候选国资格。随后安理会在4月8日讨论了相关问题并委托一个委员会审查新成员的候选资格，该委员会于9日和11日召开了两次会议。一周后的4月15日，讨论结果揭晓，按照协商一致原则运作的这一委员会未能达成共识，三分之一的国家拒绝支持拉姆安拉。16日晚间，巴勒斯坦驻联合国代表团在其X 平台账户上发表了阿拉伯国家集团在联合国发表的声明，要求联合国安理会“接受巴勒斯坦国为联合国会员国”。阿拉伯国家集团声明指出：呼吁所有安理会成员国投票赞成阿尔及利亚代表阿拉伯集团周二晚上提交的决议草案，呼吁理事会成员至少不要阻碍这一重要举措”。</p><p>据报道，此一草案极有可能获得安理会15国理事国中9个理事国的支持。但最重要的是，需获得由中、美、法、英、俄这5个常任理事国的一致通过方可生效，任何一个常任理事国的否决均可将此一提案扼杀在萌芽中。而美国则是最大障碍。另外，即使此一提案在理事会获得通过，仍需由联合国大会以三分之二多数做出最终决定。</p><p>长期以来，联合国安理会一直支持以色列和巴勒斯坦建立两个在安全和公认的边界内毗邻共存的设想。巴勒斯坦人希望在约旦河西岸、东耶路撒冷和加沙地带的土地上建立自己的国家。在1967年的战争中，这些地区全部被以色列占领。</p><p>实际上，自上个世纪90年代初，以色列和巴勒斯坦权力机构签署《奥斯陆协议》以来，建立巴勒斯坦国的进程几乎没有任何进展，美国的立场也丝毫没有改变。</p><p>美国驻联合国大使格林菲尔德周三在首尔举行的新闻发布会上表示，她不认为阿尔及利亚提出的决议草案有助于达成巴以冲突的两国方案。华盛顿曾在此前表示：建立独立的巴勒斯坦国应该通过以色列和巴勒斯坦人之间的直接谈判而不是在联合国进行。</p><p>一位外交人士透过PassBlue网站披露：如果今天安理会的投票不尽如巴勒斯坦之意，作为安慰，巴勒斯坦可获得“增强的”观察员地位，这意味“主权”却非“国家实体”，其候选资格可获安理会定期审查。</p><p>另外，根据联合国大会2022年12月的审议要求，联合国所属国际法院今年2月19日开始在荷兰海牙举行听证会，讨论以色列占领巴勒斯坦人居住地带带来的法律后果。15位法官应在6个月内公布“不具约束力”的咨询意见。虽然此举不直接涉及以色列目前在加沙的军事行动，也不具有法律约束力，但有可能在政治上对以色列造成压力，并将具有“重大法律意义和道德权威”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%B5%81%E8%8A%B3/" title="流芳">流芳</a></div></div></div></div>
+<div>18/04/2024 - 16:23</div><img src="https://s.rfi.fr/media/display/0e6b372e-e821-11ed-8ba9-005056a90284/w:1280/p:16x9/2023-04-29T210724Z_124636285_RC2BMW9Q52NU_RTRMADP_3_USA-PHILIPPINES.JPG"><p><strong>当地时间 4 月 22 日至 5 月 8 日，美国和菲律宾将举行本年度“肩并肩”联合军事演习，此次演习可能有多达 1 万 7 千人参加，主要有来自美国、菲律宾、澳洲和法国的武装部队。消息称，在“击沉演习”部分，演习击沉目标选定为退役的菲律宾海军补给舰“卡里拉亚湖”号，而此舰原是中国制造、菲律宾企业所使用的民用油船，是菲律宾唯一的“中国造海军资产”。        </strong></p><div><p>据新头壳今天引述中媒《观察者网》今（18）日消息，负责此次演习的菲律宾陆军上校和发言人洛吉科（Michael Logico）近期在记者会上公布，此次演习将创造诸多“第一”，除了人数创下历年最高，菲律宾海岸警卫队（PCG）也将首次参加演习，演习还将首次在菲律宾 12 海里领海以外展开，并将模拟“夺回被敌对势力占领的岛屿”等场景。另外在“击沉演习”部分，演习击沉目标选定为退役的菲律宾海军补给舰“卡里拉亚湖”号。</p><p>据该消息，值得注意的是，这艘军舰原是中国制造、菲律宾企业所使用的民用油船，是菲律宾唯一的“中国造海军资产”。对此菲军坚称，此举“并非有意为之”，这不代表向特定国家发出信号。洛吉科强调，这场联合军演不针对任何外国，包括中国。</p><p>此次演习还有另一个重点“后勤演习”，包括测试空运美国海军标准 6 型（SM-6）防空导弹系统的可行性。</p><p>今年“肩并肩”演习将有至少 1 万 6 千人一同参与，其中包括 1 万 1 千名美军士兵和 5 千名菲律宾武装部队士兵，其余人则将来自法国海军和澳洲国防军。这一总人数预计将超过去年的 1 万 6 千人，去年的参演人员主要来自美军和菲律宾武装部队。</p><p>该报引述洛吉科称，包括东盟、欧盟和日本在内的其他 14 个国家和组织，将针对演习派出“观察员”。洛吉科补充，今年演习将测试菲律宾武装部队与外国部队的“互操作性”，这一概念是由菲律宾国防部长特奥多罗（Gilberto Teodoro）提出，特奥多罗声称，这将使菲律宾武装部队从内部防御转向外部防御，或者从打击当地叛乱转向打击外国敌人。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWpZ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240418-%25E8%258F%25B2%25E7%25BE%258E%25E8%2582%25A9%25E5%25B9%25B6%25E8%2582%25A9%25E5%2586%259B%25E6%25BC%2594%25E5%25AE%259E%25E5%25BC%25B9%25E5%2587%25BB%25E6%25B2%2589%25E4%25B8%25AD%25E5%259B%25BD%25E9%2580%25A0%25E9%2580%2580%25E5%25BD%25B9%25E5%2586%259B%25E8%2588%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0%20-%20https%3A%2F%2Frfi.my%2FAWpZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0%20-%20https%3A%2F%2Frfi.my%2FAWpZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWpZ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
