--- a/articles/rfi/999988.md
+++ b/articles/rfi/999988.md
@@ -1,5 +1,5 @@
-<!--1713433502000-->
-[赖清德入选《时代》杂志百位最具影响力人物名单](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E8%B5%96%E6%B8%85%E5%BE%B7%E5%85%A5%E9%80%89-%E6%97%B6%E4%BB%A3-%E6%9D%82%E5%BF%97%E7%99%BE%E4%BD%8D%E6%9C%80%E5%85%B7%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%BA%BA%E7%89%A9%E5%90%8D%E5%8D%95)
+<!--1713444302000-->
+[拜登昨晚大批中国钢铁排外与作弊 发言人林剑今早冷问是否说美国自己](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A-%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1)
 ------
 
-<div>18/04/2024 - 10:19</div><img src="https://s.rfi.fr/media/display/6cd2042e-3573-11ee-a841-005056a90284/w:1280/p:16x9/%E8%B5%96%E6%B8%85%E5%BE%B7.jpg"><p><strong>将于5月正式就职的台湾下一任总统赖清德入选《时代》杂志100位最具影响力的人物名单。《时代》杂志公布了2024年全球百位最具影响力的人物名单后，台湾总统府周四做出表态称：赖清德入选此一名单，标志着国际社会对台湾人民“民主成就”的重要认可。同时表示：赖清德将“承担维护台湾民主的重要职责”。        </strong></p><div><p>在今年1月举行的台湾大选中胜出的副总统赖清德将于5月20日在台湾与中国大陆之间的紧张关系持续加剧的背景下宣誓就职。</p><p>美国前驻华大使、犹他州前州长乔恩-亨茨曼（洪博培）在《时代》杂志上写道：在中国加大力度准备收复台湾的造势中，保护（台湾）岛2300万民众的健康只是赖清德继承的更艰巨的任务之一。</p><p>法新社指出：中国视台湾为其领土的一部分，从未放弃要“收复”台湾的愿望，并表示“不排除使用武力收复台湾的可能”。</p><p>近年来，北京加大了对台湾的军事和政治压力，并谴责赖清德为“危险的分裂分子”。赖清德与蔡英文一样拒绝承认北京对台湾的主权要求。</p><p>《时代》杂志每年都会发表百位影响力人物名单。即将卸任的台湾总统蔡英文曾入选2020年名单。当时推荐蔡英文的美国联邦参议员科鲁兹（Ted Cruz）称蔡英文为“驱散中国威胁阴影的光环，向世界表明：台湾不会屈服于中国共产党的要求”。</p><p>另据法新社报道：中国现任总理李强也被提上《时代》杂志最有影响力的人物名单。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWkk.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E8%25B5%2596%25E6%25B8%2585%25E5%25BE%25B7%25E5%2585%25A5%25E9%2580%2589-%25E6%2597%25B6%25E4%25BB%25A3-%25E6%259D%2582%25E5%25BF%2597%25E7%2599%25BE%25E4%25BD%258D%25E6%259C%2580%25E5%2585%25B7%25E5%25BD%25B1%25E5%2593%258D%25E5%258A%259B%25E4%25BA%25BA%25E7%2589%25A9%25E5%2590%258D%25E5%258D%2595&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%B5%96%E6%B8%85%E5%BE%B7%E5%85%A5%E9%80%89%E3%80%8A%E6%97%B6%E4%BB%A3%E3%80%8B%E6%9D%82%E5%BF%97%E7%99%BE%E4%BD%8D%E6%9C%80%E5%85%B7%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%BA%BA%E7%89%A9%E5%90%8D%E5%8D%95%20-%20https%3A%2F%2Frfi.my%2FAWkk.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%B5%96%E6%B8%85%E5%BE%B7%E5%85%A5%E9%80%89%E3%80%8A%E6%97%B6%E4%BB%A3%E3%80%8B%E6%9D%82%E5%BF%97%E7%99%BE%E4%BD%8D%E6%9C%80%E5%85%B7%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%BA%BA%E7%89%A9%E5%90%8D%E5%8D%95%20-%20https%3A%2F%2Frfi.my%2FAWkk.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWkk.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%B5%96%E6%B8%85%E5%BE%B7%E5%85%A5%E9%80%89%E3%80%8A%E6%97%B6%E4%BB%A3%E3%80%8B%E6%9D%82%E5%BF%97%E7%99%BE%E4%BD%8D%E6%9C%80%E5%85%B7%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%BA%BA%E7%89%A9%E5%90%8D%E5%8D%95&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 10:19</div><img src="https://s.rfi.fr/media/display/de4dac9c-fa86-11ee-8398-005056bfb2b6/w:1280/p:16x9/AP24103786777136.jpg"><p><strong>周四，中国今天指责美国总统拜登虚伪。美国总统拜登昨天在美国匹兹堡发表讲话指责中国当局在全球“钢铁”贸易中“排外”和“作弊”。 中国外交部发言人林剑今天回应称，“我想问拜登，你说的是中国还是美国？”        </strong></p><div><p>美国总统拜登昨天宣布，他希望将来自中国的钢铁和铝的关税提高两倍。法新社称，这是拜登试图吸引美国工人阶级的政治选票。拜登开始一个星期的在宾夕法尼亚州竞选宣传活动。</p><p>这位民主党人指责北京在全球钢铁贸易中“作弊”，损害了美国制造商及其工人的利益，美国制造商及其雇员是11月总统选举的关键选民，除非有任何意外，他将在这次选举中面对他的竞争对手特朗普。</p><p>拜登指控中国说，“他们仇外。” 这位民主党人感叹中国钢铁企业“不必担心盈利问题，因为中国政府对它们提供大量补贴”。拜登称，“他们不是在竞争，而是在作弊，我们已经在美国看到了这种损害。”</p><p>拜登自称是美国工人最好盟友。拜登说，“我不是在寻求与中国对抗，我想要竞争，而是公平竞争。”</p><p>拜登还进一步澄清，他保证不会与北京发生“贸易战”。</p><p>美国工会和雇主一致对这些保护主义措施表示欢迎。美国钢铁工人联合会（USW）感谢他为捍卫美国的钢铁而采取的“积极”行动。该工会上个月宣布支持民主党参加11月大选，指责拜登的对手特朗普“剥夺工人权利”，尽管特朗普也自称是美国制造业复兴的捍卫者。</p><p>法新社说，自 1990 年以来，宾夕法尼亚州已经失去了超过 40% 的制造业工作岗位，宾夕法尼亚州是美国工业的历史中心，也是可能在 11 月左右选举结果的六个关键州之一。</p><p>总部位于该州的美国钢铁巨头美国钢铁公司表示“赞赏”乔·拜登的声明，该行业的雇主组织也持这一立场。 这位民主党人周三还重申反对日本新日铁公司收购美国公司。</p><p>周二的前一天，拜登从家乡斯克兰顿呼吁为最富有的人增加税收，这与特朗普竞选立场形成鲜明对比。 周三，特朗普陷入非常忙碌，因为他在纽约忙碌的应对审判。</p><p>民主党目前的竞选活动，主要关注宾夕法尼亚州及其白人工人选民。</p><p>特朗普谴责拜登对他的不实指控。特朗普长期以来一直为增加对中国的关税辩护，他的竞选团队周三谴责了民主党及时改变主意。共和党指责“拜登的整个职业生涯都在背叛美国工人，”共和党发言人在一份声明中写道，拜登周三宣布的措施“太软弱，而且来得太晚”。</p><p>拜登周三还呼吁其贸易代表（USTR）“考虑将目前的关税提高两倍”，对进口到美国的部分钢铁和中国铝征收平均7.5%的关税。拜登政府还宣布对中国在“造船、航运和物流领域”的措施进行调查。</p><p>据法新社称，北京迅速谴责“不实指控”。中国商务部称，美国的调查“错误地将正常的贸易和投资活动解释为损害国家安全和美国企业的利益”。 美国“指责中国应对其自身的工业问题负责”。</p><p>尽管两国重新启动了对话，但美国的声明是在与中国激烈竞争的背景下做出的。当被问及这些声明是否会危及他试图与中国国家主席习近平维持的关系时，拜登回答说“不会”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWki.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E6%258B%259C%25E7%2599%25BB%25E6%2598%25A8%25E6%2599%259A%25E5%25A4%25A7%25E6%2589%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E6%258E%2592%25E5%25A4%2596%25E4%25B8%258E%25E4%25BD%259C%25E5%25BC%258A-%25E5%258F%2591%25E8%25A8%2580%25E4%25BA%25BA%25E6%259E%2597%25E5%2589%2591%25E4%25BB%258A%25E6%2597%25A9%25E5%2586%25B7%25E9%2597%25AE%25E6%2598%25AF%25E5%2590%25A6%25E8%25AF%25B4%25E7%25BE%258E%25E5%259B%25BD%25E8%2587%25AA%25E5%25B7%25B1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1%20-%20https%3A%2F%2Frfi.my%2FAWki.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1%20-%20https%3A%2F%2Frfi.my%2FAWki.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWki.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
