--- a/articles/rfi/999989.md
+++ b/articles/rfi/999989.md
@@ -1,5 +1,5 @@
-<!--1713433502000-->
-[乌战最大影响之一：面对美国，中俄轴心得到加强 - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240417-%E4%B8%AD%E4%BF%84%E5%85%B3%E7%B3%BB%E6%B7%B1%E5%8C%96-%E8%AE%A9%E7%BE%8E%E5%9B%BD%E6%8B%85%E5%BF%83)
+<!--1713444302000-->
+[法国总理阿塔尔上任一百天了 政绩如何？ - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240418-%E6%B3%95%E5%9B%BD%E6%80%BB%E7%90%86%E9%98%BF%E5%A1%94%E5%B0%94%E4%B8%8A%E4%BB%BB%E4%B8%80%E7%99%BE%E5%A4%A9%E4%BA%86-%E6%94%BF%E7%BB%A9%E5%A6%82%E4%BD%95)
 ------
 
-<div>17/04/2024 - 23:11</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>周四（4月18号）上市的法国《世界报》有多篇文章与中国有关。两篇占据着国际版的版面的文章分别是《北京关注所罗门群岛的选举》，另一篇为《 在十年的 “猎狐”行动中，中国遣返了数千名 “逃犯”》。地缘政治专栏关注的是乌克兰战争让美国的担心的中俄日益结盟。                    </strong></p><div><p>文章作者Sylvie Kauffmann在文中开头写道，德国总理奥拉夫-肖尔茨（Olaf Scholz）于4月17日（周三）结束访华，以及中国国家主席习近平于5月6日在巴黎接会见埃马纽埃尔-马克龙（Emmanuel Macron）的欧洲之行前，华盛顿向欧洲人传达了一个信息：既然你们与北京保持着高层关系，就利用这种关系向中国施压，使其停止在乌克兰战争中帮助俄罗斯。最近几周，法国外长斯特凡-塞茹尔内（Stéphane Séjourné）在北京、美国访华的领导人以及朔尔茨（Olaf Scholz）都积极转达了这一信息。这反映了美国对乌克兰战争最引人注目的地缘政治影响之一——中俄关系的深化——的担忧。</p><p> 为了让那些依然怀疑的人相信这种深化对战争进程产生了具体影响，并在一定程度上解释俄罗斯经济, 4 月 12 日，华盛顿公布了之前保密的数据：包括，在 2023 年最后一个季度，中国向俄罗斯提供了用于生产弹道导弹的机床进口量的 70%以上。2023年全年，俄罗斯进口的微电子产品中90%来自中国，而微电子产品对导弹和坦克的制造至关重要。</p><p><strong>美国为何突然坚持中国因素？</strong></p><p>尽管受到西方制裁，但俄罗斯工业仍以惊人的速度恢复并大量生产武器，面对因西方供应迟缓而陷入困境的乌克兰军队，这些武器在当地发挥了重要作用。</p><p>克里姆林宫从中国和印度进口的俄罗斯石油中获得了可观的收入，这些国家现在已经弥补了莫斯科失去欧洲市场的损失。但来自中国的物质援助似乎正在发挥着重要作用，即使这种援助没有越过提供致命武器的红线。</p><p>另一种解释是中俄轴心的加强，这是大国间力量平衡演变的主要趋势。对于以中国力量崛起衡量一切的美国来说，这一点不容忽视。众所周知，中俄关系的根本就是共同反对美国统治。</p><p><strong>“俄罗斯正在将自己锁定为中国的附庸”</strong></p><p>俄中关系的缓和并不是全新的，莫斯科早在2014年就转向了中国，当时俄罗斯吞并克里米亚后与西方国家的关系降温，第一波制裁也随之而来，从那时起，中俄之间的贸易大幅增长。但直到 2022 年，欧盟仍是莫斯科的重要经济伙伴，对乌克兰发动大规模战争后，俄罗斯被迫完全转向中国。</p><p>2022 年 2 月 4 日，普京和习近平两国元首在北京冬奥会之际举行会晤，并发表公报宣布 "无限友谊"，这被视为两国关系缓和的重要一步。此时距离普京入侵乌克兰还有三周时间，人们一直在猜测普京是否向习近平警告了他正在策划的攻势。</p><p>但从那时起，他们之间的关系得到了巩固。卡内基智库专家亚历山大-加布耶夫（Alexander Gabuev）在《外交事务》（Foreign Affairs）杂志上写道："俄罗斯维持与西方对抗的唯一途径是将俄罗斯的经济、人才和军事技术融入"中国大同”，即以欧亚大陆为地理中心、由中国主导的秩序。俄罗斯正在将自己锁定为中国的附庸"。</p><p>因此，西方国家中那些主张与普京对话的人所追求的，防止俄罗斯落入中国的轨道并将俄罗斯与欧洲联系在一起的目标不仅没有实现，而且乌克兰战争实际上将俄罗斯投入了中国的怀抱。</p><p>然而，中国政府似乎并没有用爱的眼光来看待这场有些勉强的婚姻。尽管两国领导人频繁接触，且预计普京将于 5 月再次访问北京， 但 "友谊无上限 "的说法并未再被提及，两国也没有结成联盟。</p><p><strong>宗主对附庸并不仁慈</strong></p><p>一些中国学者和专家在中国之外的媒体上对俄罗斯转向亚洲的真实性持保留意见：北京大学的关贵海（音译）认为在普京在乌克兰问题上的固执可以解释为他害怕失去俄罗斯的欧洲身份。他在美国外交关系委员会网站上写道，“如果俄罗斯失去乌克兰，"其与欧洲的联系将大大削弱，其战略空间将远离欧洲中心，俄罗斯将更像一个亚洲国家"。</p><p>中国的另一个保留意见是：中俄两国对世界秩序演变的看法并不一致。学者冯玉军（音译）在《经济学人》上写道："俄罗斯试图通过战争破坏现有的地区和国际秩序，而中国则希望和平解决冲突"，他对普京在乌克兰的军事表现印象深刻，"俄罗斯不可战胜的神话已经破灭"。</p><p>宗主对附庸并不仁慈。面对中俄轴心，美国正在巩固其印太集团，同时呼吁欧洲就乌克兰问题与北京进行 "有力的对话"，条件是欧洲人准备好这样做了。</p><p><strong> 在十年的 “猎狐”行动中，中国遣返了数千名 “逃犯”</strong></p><p>在《世界报》上这篇关注中国“猎狐”计划的文章中， 作者Simon Leplâtre指出，总部设在马德里的非政府组织 "保护捍卫者 "于 4 月 16 日发表了一份报告，回顾了这项于 2015 年更名为 "天网 "运动的十年历程。报告审查了 283 起强制遣返案件，其中四起来自法国。</p><p>虽然有些国家直接或通过国际刑警组织与中国合作，但大多数行动都是在任何法律框架之外进行的。据中国共产党中央纪律检查委员会（CCDI）称，十年来，作为行动的一部分，已有 12,000 人从 120 个国家被强制遣返。这次行动是在习近平主席上任一年多后启动的，紧随大规模反腐运动之后。最初的目标是遣返被称为 "狐狸 "的腐败官员。但这场运动也与中国在国际舞台上的崛起不谋而合，中国政府认为，在崛起的同时应加强对其公民在海外活动的控制。实际上，这些方法也适用于批评中国政权的人，或谴责其家人在中国所受待遇的受害者亲属。</p><p>散居国外的维吾尔族人受到的打击尤为严重。报告重点介绍了土耳其维吾尔族人的情况："中国当局根据收集到的关于生活在土耳其的维吾尔族人的信息，以及他们对留在中国的家人安全的担忧，胁迫或威胁他们停止激进活动，制作有利于中国的宣传品，和/或监视土耳其的其他维吾尔族人"。除这些威胁外，特工还可能提供奖励：包括金钱或探访中国亲属的机会。</p><p>在一些与中国政治关系密切的国家，如斐济，与北京签署了安全协议后，中国特工的行为就像在国内一样。东南亚许多国家也与中国政府合作。近年来，随着 Covid-19 大流行，由中国黑帮组织的网上诈骗活动日益猖獗，尤其是来自缅甸的诈骗活动。</p><p>然而，随着时间的推移，国际社会也做出了反应：例如，在斐济，2022 年底当选的新总理下令修改与中国的合作协议，该国不再欢迎中国官员入境。2022 年，欧洲人权法院做出裁决，宣布波兰对一名台湾公民提起的诉讼无效，这名台湾公民被威胁要引渡到中国，不是因为他的国籍，而是因为中国政权的专制性质。此案开创了先例。报告说："从那时起，情况发生了翻天覆地的变化，欧洲委员会的 46 个成员国系统地拒绝了向中国提出的引渡请求（......）"。最后，在美国，中国和美国公民在多起与企图强制遣返中国有关的案件中被捕并受审。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%89%BE%E7%B1%B3/" title="艾米">艾米</a></div></div></div></div>
+<div>18/04/2024 - 14:03</div><img src="https://s.rfi.fr/media/display/b0a32400-f006-11ee-8629-005056a90284/w:1280/p:16x9/2024-03-27T202323Z_336472124_RC2OP6A8S2QK_RTRMADP_3_FRANCE-UNEMPLOYMENT-ATTAL.JPG"><p><strong>周四（4月18号）是法国总理加布里埃尔-阿塔尔被任命100天，各报均对这个主题有大幅报道和分析。根据咨询公司Odoxa-Backbone Consulting 为《费加罗报》所做的最新民意调查，法国人虽然对总理的行为持批评态度，但对他的个人魅力表示认可。                    </strong></p><div><p>根据这份民调， 48%的法国人认为他是一位好总理，但他的形象在多个方面都在下滑：68%的法国人认为他充满活力，下降两个百分点，但认为他有魅力或贴近民众关切的人分别为45%和44%, 均有所下降。</p><p>在他入职后的总政策演讲中，新总理曾定下了基调：包括"重塑法国"、"取消对员工的补贴"、创造住房 "供应冲击"、"去行政官僚化"......在抵达马蒂尼翁一百天后，现在到了阿塔尔做一个小总结的时候了。各报自然对他的政策亮点进行了点评和期望。</p><p><strong>青年暴力和教育问题</strong></p><p>右翼《费加罗报》指出，加布里埃尔-阿塔尔（Gabriel Attal）希望在本周四纪念他上任100天之际，利用他在马蒂尼翁的权威，他要前往埃松省（Essonne）的维利-沙蒂永（Viri-Châtillon），之所以选择这个城市，是因为十天前在该市的一个中学校门口，发生了一名15岁的少年被人殴打致死而震惊法国舆论的惨案。阿塔尔将发表题为"“关于共和国核心权力”的演讲，试图消除人们的疑虑。但尽管这位前教育部长似乎曾带来了典范式的转变，但在世俗主义受到质疑的背景下，青少年暴力事件数量仍在令人担忧地增加。</p><p>左翼《解放报》指出，自1月9日上任以来，总理一直在应对动荡的预算形势和国民议会中脆弱的相对多数。为了坚持自己的立场，政府首脑寄希望于恢复权威，尤其是在青年和教育问题上。</p><p>《费加罗报》指出，糟糕的政府政绩和公共财政的急剧恶化，正在为他作为政府首脑的第一步成果蒙上阴影，尽管在这些问题上，他此前的声望一直很高。阿塔尔意识到自己在国民议会中并不占绝对多数，因此自上任以来一直没有提交任何重要立法。这让他的一些部下感到不耐烦，一些人呼吁 "重新启动立法机器"。为了回应对总理言行不一的指责，各部长办公室于周二晚间接到指示，要求他们准备视觉资料，在社交网络上列出总理的成就。</p><p><strong>空洞的一百天</strong></p><p>《解放报》的一篇评论更指出，加布里埃尔-阿塔尔在总理府的一百天，是空洞的一百天：既不左，也不由，什么都不是。总统马克龙的第四任总理上任三个月后，其沟通方式虽然花样多但均短视。作者认为这是马克龙主义没有指南针的表现。如果相信阿塔尔的演讲和他的执政艺术，那么他的逻辑应该是努力与右派共同执政，以获得绝对多数。但是，如果没有事先达成的政治协议，没有足够自信的道德或个人权威，阿塔尔将一事无成。他甚至无法在欧洲大选中为复兴党推出名单开展有效的竞选活动。他的出现只不过是作为一种回应的尝试，旨在对抗在欧洲议会选举上占据投票意向领先的极右翼国民联盟的带头人巴尔德拉（Jordan Bardella<em> ) </em>的效应。</p><p>这篇充满批评语气的文章最后写道：没有多数，没有权威，没有明确的政治定位，没有改革计划来安排未来几个月的工作，阿塔尔除了努力避免错过奥运会的组织工作，以及带着矛盾的双重目标：既不吓唬评级机构，以免我们的债务利率飙升，又不冒社会危机的风险，很难看出他还有什么作用。在欧洲大选可能失败后，这样一个政治团队如何能够团结一致？</p><p><strong>欧洲议会选举的挑战</strong></p><p>对于加布里埃尔-阿塔尔的政治未来，右派的《费加罗报》似乎也不看好，指出，他最坏的打算是什么？在马蒂尼翁的日子不会长久，而议会提出谴责动议的可能性正日益激化右翼队伍，并可能拉拢左翼和新军。总理深知这一点：从 7 月 9 日起，即欧洲大选一个月后，也就是他上任六个月后，国家元首必须按照传统授予他国家功勋大十字勋章。那么，至少他还有一百天的任期。</p><p>经济类报纸《回声报》同一主题指出，在总理府马提翁执政一百天后，加布里埃尔-阿塔尔着手解决 "权力削弱 "问题。周四的讲话要回应公众对安全的强烈要求。马克龙总统在奥林匹克运动会开幕前一百天，就法国人关心的另一个问题--奥林匹克运动会的安全问题作出了保证。</p><p>该报指出，面对极右翼的国民联盟的攻势，执政党多数派仍未找到扭转趋势的良方。妖魔化不再奏效，谴责国民联盟议员在欧洲议会的记录或审查他们的提案也不再奏效。根据《回声报》（Les Echos）和 古典广播电台（Radio classique）委托进行的 EuroTrack 民意调查，对安全问题讨论的支持率正在上升，在本次议会大选中位列第三，仅次于购买力和物价上涨议题。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%89%BE%E7%B1%B3/" title="艾米">艾米</a></div></div></div></div>
