--- a/articles/rfi/999992.md
+++ b/articles/rfi/999992.md
@@ -1,5 +1,5 @@
-<!--1713431701000-->
-[德中签协共享汽车数据](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE)
+<!--1713438902000-->
+[20国急买50万发炮弹援乌](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C)
 ------
 
-<div>18/04/2024 - 10:43</div><img src="https://s.rfi.fr/media/display/87997fee-fcb5-11ee-be18-005056bfb2b6/w:1280/p:16x9/AP24107536582728.jpg"><p><strong>德国和中国签署了一份在自动驾驶和互联驾驶方面进行合作的联合声明，德国希望该声明将使汽车制造商能够将数据从中国传输到德国。这项合作被认为是德国总理朔尔兹访华的另一个成果，但数据共享这对于在华外国企业来说是一个有争议的话题。        </strong></p><div><p>据路透社报道称，德国与中国两国将共同制定共享标准和规则，以管理企业开发自动驾驶时产生的数据，德国汽车协会 VDA 表示此举将节省开发和生产资源。</p><p>该声明发布之际，欧盟和美国越来越担心中国技术进入欧美市场并在当地收集数据可能存在的安全风险，华盛顿于二月份对中国汽车进口可能存在的国家安全风险展开调查。</p><p>然而，包括大众汽车中国区总裁在内的欧洲商界领袖对中国对从中国向欧洲传输数据的限制表示失望，这些限制比欧洲对从欧洲向中国传输数据的规定要严格得多。</p><p>中国加强了对国内数据管理的监管，大多数行业在数据转移到国外之前必须申请许可。</p><p>去年，中国当局收紧了汽车行业的数据规则，并提议禁止中国的智能汽车直接将数据传输到国外，迫使它们转而使用国内的云服务。</p><p>然而，中国监管机构此后表示立场会有所软化，因为企业抱怨法律缺乏明确性，以及这些法律可能会给他们的业务带来多么繁重和破坏性的影响。</p><p>根据德国声明称，该合作将为进一步讨论该主题提供空间，强调尚未达成共识，并主张“德国和欧盟企业在这一领域做出切实改进”。</p><p>自动驾驶汽车通过激光雷达和传感器收集有关乘客和驾驶员行为以及汽车周围环境的大量数据。汽车还通过与手机和其他设备的链接收集越来越多的驾驶数据。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWl6.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E5%25BE%25B7%25E4%25B8%25AD%25E7%25AD%25BE%25E5%258D%258F%25E5%2585%25B1%25E4%25BA%25AB%25E6%25B1%25BD%25E8%25BD%25A6%25E6%2595%25B0%25E6%258D%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE%20-%20https%3A%2F%2Frfi.my%2FAWl6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE%20-%20https%3A%2F%2Frfi.my%2FAWl6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWl6.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 10:51</div><img src="https://s.rfi.fr/media/display/2c8b8e72-faf7-11ee-a0d4-005056bf30b7/w:1280/p:16x9/000_34P74XZ.jpg"><p><strong>捷克共和国发起了一项国际筹款行动，旨在为乌克兰军队购买弹药，而乌克兰军队在对俄战争中缺乏弹药。欧盟国家曾承诺在去年3月底之前向基辅供应100万枚炮弹，但由于缺乏足够的产能而未能交付。捷克称已调查发现世界有大炮弹壳库存，总计约 800,000 枚，可供欧洲国家购买。        </strong></p><div><p>据法新社稍早报道称，捷克总理彼得·菲亚拉表示，二十个国家已承诺在欧洲以外地区为乌克兰购买50万枚炮弹。他说，“我很高兴目前大约有二十个国家加入了我们的倡议，从加拿大到波兰，其中包括德国和荷兰。”</p><p>捷克官方称，至少50万发炮弹应该很快到货。他此前曾表示，首批交付可能会在六月进行。</p><p>据捷克媒体消息说，参与该倡议的国家还包括波罗的海国家、比利时、丹麦、芬兰、冰岛、卢森堡、挪威、葡萄牙和斯洛文尼亚。</p><p>据英国《金融时报》称，购买这80万枚炮弹将耗资15亿美元。</p><p>但捷克乌克兰重建专员托马斯·科佩奇尼周二在捷克电台估计，这笔费用可能是原来的两倍。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWlF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-20%25E5%259B%25BD%25E6%2580%25A5%25E4%25B9%25B050%25E4%25B8%2587%25E5%258F%2591%25E7%2582%25AE%25E5%25BC%25B9%25E6%258F%25B4%25E4%25B9%258C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C%20-%20https%3A%2F%2Frfi.my%2FAWlF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C%20-%20https%3A%2F%2Frfi.my%2FAWlF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWlF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
