--- a/articles/rfi/999996.md
+++ b/articles/rfi/999996.md
@@ -1,5 +1,5 @@
-<!--1713392101000-->
-[法媒：中德释放了强有力的合作信息](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E6%B3%95%E5%AA%92-%E4%B8%AD%E5%BE%B7%E9%87%8A%E6%94%BE%E4%BA%86%E5%BC%BA%E6%9C%89%E5%8A%9B%E7%9A%84%E5%90%88%E4%BD%9C%E4%BF%A1%E6%81%AF)
+<!--1713438901000-->
+[中国34岁网红“飞飞一杯酒”疑心脏病猝死 冲热搜第一](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2-%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92-%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB-%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80)
 ------
 
-<div>17/04/2024 - 22:39</div><img src="https://s.rfi.fr/media/display/87997fee-fcb5-11ee-be18-005056bfb2b6/w:1280/p:16x9/AP24107536582728.jpg"><p><strong></strong></p><div><p>法国媒体表示，世界各大媒体纷纷转载习近平和朔尔茨两人轻松散步交流的画面。钓鱼台国宾馆是外交活动的标志性场所，可以显现中国此次给朔尔茨来访的重视程度。</p><p>法国《国际邮件刊》转引《环球时报》的社评文章“朔尔茨此访再次证明什么是中德关系主流”。《环球》批评了西方对话认知的混乱，高度赞扬了中德之间理性务实的合作。《环球时报》认为，这次访问“明确了中欧方向”，“中德释放了强有力的合作信息，有利于双方，也有利于世界稳定。”《环球时报》最高的评价是说两位领导人的对话也“明确了中欧关系的方向”。</p><p>法国记者表示，《环球时报》说，欧洲部分舆论认为德国总理此次访华是对欧盟对华“去风险”政策的“背叛”。 但该报认为，欧洲人的看法在这三天的访问过程中发生了变化，同时他们发现了“中国的完整现实”。 朔尔茨关于“德国市场欢迎中国汽车”的言论也受到好评。</p><p>作为中国在欧洲最大经贸伙伴的领导人，朔尔茨并没有空手而归。 新加坡报纸《联合早报》报道称，朔尔茨结束访华当天，中方解除对德牛肉禁令。</p><p>三周后，习近平将访问欧洲。 法国媒体透露，北京目前正在准备中国国家主席习近平的欧洲之行，“预计五月初将前往布达佩斯、贝尔格莱德和巴黎”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgv.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E6%25B3%2595%25E5%25AA%2592-%25E4%25B8%25AD%25E5%25BE%25B7%25E9%2587%258A%25E6%2594%25BE%25E4%25BA%2586%25E5%25BC%25BA%25E6%259C%2589%25E5%258A%259B%25E7%259A%2584%25E5%2590%2588%25E4%25BD%259C%25E4%25BF%25A1%25E6%2581%25AF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%95%E5%AA%92%EF%BC%9A%E4%B8%AD%E5%BE%B7%E9%87%8A%E6%94%BE%E4%BA%86%E5%BC%BA%E6%9C%89%E5%8A%9B%E7%9A%84%E5%90%88%E4%BD%9C%E4%BF%A1%E6%81%AF%20-%20https%3A%2F%2Frfi.my%2FAWgv.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%95%E5%AA%92%EF%BC%9A%E4%B8%AD%E5%BE%B7%E9%87%8A%E6%94%BE%E4%BA%86%E5%BC%BA%E6%9C%89%E5%8A%9B%E7%9A%84%E5%90%88%E4%BD%9C%E4%BF%A1%E6%81%AF%20-%20https%3A%2F%2Frfi.my%2FAWgv.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgv.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%95%E5%AA%92%EF%BC%9A%E4%B8%AD%E5%BE%B7%E9%87%8A%E6%94%BE%E4%BA%86%E5%BC%BA%E6%9C%89%E5%8A%9B%E7%9A%84%E5%90%88%E4%BD%9C%E4%BF%A1%E6%81%AF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 11:53</div><img src="https://s.rfi.fr/media/display/726932c2-fd69-11ee-8493-005056a90284/w:1280/p:16x9/whts.jpg"><p><strong>在中国微博、抖音拥有89万、51万粉丝的中国网红“飞飞一杯酒”是知名酒类博主，号称“喝了几千款，永远差一杯”。17日晚间突传该网红死讯。        </strong></p><div><p>据自由时报今天报道称，34岁网红飞飞一杯酒心脏病猝死 过世当天还更新影片。“飞飞一杯酒”死讯曝光后，随即冲上微博热搜第一名，他的微博号昨晚也发讣闻，指他15日因心脏病突发在河南省中医院过世，享年34岁。</p><p>讣闻中形容“飞飞一杯酒”一生“出生、读书、画画”、“喝酒、侃酒、交友”，“结婚、生子、离去”，走完了一生；但更让人不舍的是，他的微博在15日下午4时30分还更新影片，让许多网友留言不舍哀悼一路走好，并推测其死因可能与生活长期熬夜和饮酒有关。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWlt.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E4%25B8%25AD%25E5%259B%25BD34%25E5%25B2%2581%25E7%25BD%2591%25E7%25BA%25A2-%25E9%25A3%259E%25E9%25A3%259E%25E4%25B8%2580%25E6%259D%25AF%25E9%2585%2592-%25E7%2596%2591%25E5%25BF%2583%25E8%2584%258F%25E7%2597%2585%25E7%258C%259D%25E6%25AD%25BB-%25E5%2586%25B2%25E7%2583%25AD%25E6%2590%259C%25E7%25AC%25AC%25E4%25B8%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWlt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWlt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWlt.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
