--- a/articles/rfi/999997.md
+++ b/articles/rfi/999997.md
@@ -1,5 +1,5 @@
-<!--1713392101000-->
-[以军宣布援助物资通过阿什杜德港进入加沙](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240417-%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99)
+<!--1713438901000-->
+[所罗门可能的新总理称上台翌日即废止与中国协议](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240418-%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE)
 ------
 
-<div>17/04/2024 - 22:35</div><img src="https://s.rfi.fr/media/display/ad8b7fa4-fbac-11ee-9429-005056a97e36/w:1280/p:16x9/2024-04-12T072218Z_257605188_RC2L37AGYJG0_RTRMADP_3_ISRAEL-PALESTINIANS-GAZA-EID-PRAYERS.JPG"><p><strong></strong></p><div><p>军方在一份声明中表示：“世界粮食计划署的八卡车面粉4月17日从阿什杜德港进入加沙地带。”军方补充说，这是“阿什杜德港获批开放以来的第一次”。</p><p>4月5日，以色列政府迫于盟友和国际组织的压力，宣布了多项措施，旨在加快向被围困、面临人道主义悲剧的加沙地带运送援助物资。这些措施包括向加沙提供的援助物资抵达阿什杜德港，因为该港靠近巴勒斯坦领土。 以色列大型港口位于加沙以北约三十公里处。</p><p>来自人道主义机构的国际援助主要通过塞得港或较小的阿里什港抵达埃及。</p><p>军方周三表示，粮食计划署的卡车“在阿什杜德港接受了彻底的安全检查，然后通过凯雷姆沙洛姆过境点进入加沙地带”。</p><p>据人道主义组织称，凯雷姆沙洛姆（Kerem Shalom）是从以色列进入加沙的少数几个陆路口岸之一，位于加沙南部边境，导致检查援助物资的旅程非常耗时。</p><p>作为4月5日宣布措施的一部分，以色列还表示，已在人道主义危机最严重的加沙地带北部开设了一个新的陆路过境点。目前，大多数卡车通过埃及和加沙边境的拉法过境点进入，该过境点位于巴勒斯坦领土的南端，被以色列和巴勒斯坦哈马斯之间的战争蹂躏了六个多月。</p><p>军方周二宣布，约 553 辆人道主义援助卡车在 48 小时内进入加沙地带，联合国认为这一数字不够。联合国巴勒斯坦难民机构（近东救济工程处）当天在一份新闻稿中强调，“进入加沙的人道主义援助数量没有发生重大变化，进入加沙北部的通道也没有改善”。</p><p>据近东救济工程处称，自 4 月初以来，平均每天有 181 辆援助卡车通过拉法和凯雷姆沙洛姆出入点进入加沙，估计这一数字“远低于两个边境哨所的业务能力和每天 500 辆卡车”。</p><p>周三，以色列总理内塔尼亚胡“驳斥了国际组织对加沙闹饥荒的指控，并确认以色列在人道主义问题上正在尽一切努力。”</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgo.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240417-%25E4%25BB%25A5%25E5%2586%259B%25E5%25AE%25A3%25E5%25B8%2583%25E6%258F%25B4%25E5%258A%25A9%25E7%2589%25A9%25E8%25B5%2584%25E9%2580%259A%25E8%25BF%2587%25E9%2598%25BF%25E4%25BB%2580%25E6%259D%259C%25E5%25BE%25B7%25E6%25B8%25AF%25E8%25BF%259B%25E5%2585%25A5%25E5%258A%25A0%25E6%25B2%2599&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99%20-%20https%3A%2F%2Frfi.my%2FAWgo.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99%20-%20https%3A%2F%2Frfi.my%2FAWgo.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgo.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 11:05</div><img src="https://s.rfi.fr/media/display/de2f9c94-4be4-11ee-8348-005056bfb2b6/w:1280/p:16x9/Le%20port%20international%20d%27Honiara%2C%20capitale%20des%20%C3%AEles%20Salomon.JPG"><p><strong>所罗门群岛总理一职的主要候选人之一今天承诺，在可能影响该国选举的第二天，如果他上台，就废除这个太平洋小国与中国签订的地区安全协定。法新社说，中国官方媒体暗示，美国可能会策划骚乱，以阻止即将卸任的领导人重新掌权。        </strong></p><div><p>所罗门群岛总理一职的主要候选人之一，彼得·凯尼洛雷亚在马莱塔岛的村庄告诉法新社，“如果我们掌权，我们将废除与中国的安全条约。我们认为这个条约对所罗门群岛没有好处。”</p><p>周三所罗门群岛选举后，计票工作正在进行，该选举必须更新议会并选举总理，这一过程可能需要一些时间。</p><p>在这个拥有约 72 万居民、遍布数百个火山岛屿和环礁的小国举行的这次选举正受到密切关注，因为它对太平洋安全局势会有预期影响。</p><p>所罗门群岛现在的总理玛纳西·索加瓦雷 (Manasseh Sogavare) 领导所罗门群岛进入中国的轨道，并于 2022 年与北京签署了安全协议。尽管该协议的细节仍不清楚，但美国和澳大利亚担心它将为中国在南太平洋建立永久性军事基地奠定基础，这可能会改变地区安全的国际规则。</p><p>即将卸任的领导人承诺，如果再次当选，将加强与中国的关系，但他的反对者担心北京对所罗门群岛的影响，并主张与澳大利亚或美国等传统伙伴重建关系。</p><p>凯尼洛雷亚说，“我们没有天敌。” 他并对所罗门群岛已成为世界上两个最大的军事和经济大国——中国和美国——之间的争论焦点表示遗憾。他指出，“这让我们因错误的原因而臭名远扬。我们真的不需要在这里挑起不必要的紧张局势。”</p><p>据法新社今天报道称，在由身穿制服的斐济士兵和澳大利亚警察组成的国际小组的监视下，选票被卡车运送到首都霍尼亚拉一个高度保护的计票中心，这是投票面临压力的迹象。</p><p>中国官方媒体暗示，美国可能会策划骚乱，以阻止即将卸任的领导人重新掌权。美国大使安·玛丽·亚斯蒂休克称这些谣言是“公然的欺骗”。 她在一份声明中表示，“我们强烈反驳知名宣传机构关于美国国际开发署和美国政府试图影响选举的指控”。</p><p>卸任总理索加瓦雷的主要竞争对手是前联合国律师彼得·凯尼洛雷亚、人权活动家马修·韦尔和前总理经济学家戈登·达西·利洛。</p><p>然而，所罗门群岛可能要几周时间才认识他们的新总理。</p><p>选民并不直接选择他们的领导人。 他们选出代表，进行闭门谈判，组成联盟并选出领导人，这一过程可能会持续数周。</p><p>据负责选举的官员贾斯珀·阿尼西 (Jasper Anisi) 称，投票后第二天，所罗门局势平静。他说，“一切都很和平。”</p><p>所罗门之前的选举经常导致暴力。</p><p>2000年，总理巴特·乌卢法阿鲁在被心怀不满的枪手绑架后被迫辞职。</p><p>2006年，国际维和部队被部署平息选举后的暴力事件，总理斯奈德·里尼在仅仅八天后就被赶下台。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
