--- a/articles/rfi/999999.md
+++ b/articles/rfi/999999.md
@@ -1,5 +1,5 @@
-<!--1713390303000-->
-[印度计划如何减低对中国太阳能技术设备的依赖？ - 环保天地](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E4%BF%9D%E5%A4%A9%E5%9C%B0/20240417-%E5%8D%B0%E5%BA%A6%E8%AE%A1%E5%88%92%E5%A6%82%E4%BD%95%E5%87%8F%E4%BD%8E%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%A4%AA%E9%98%B3%E8%83%BD%E6%8A%80%E6%9C%AF%E8%AE%BE%E5%A4%87%E7%9A%84%E4%BE%9D%E8%B5%96)
+<!--1713433502000-->
+[乌战最大影响之一：面对美国，中俄轴心得到加强 - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240417-%E4%B8%AD%E4%BF%84%E5%85%B3%E7%B3%BB%E6%B7%B1%E5%8C%96-%E8%AE%A9%E7%BE%8E%E5%9B%BD%E6%8B%85%E5%BF%83)
 ------
 
-<div>17/04/2024 - 16:52</div><img src="https://s.rfi.fr/media/display/824afafe-0f93-11ea-b5cd-005056a99247/w:1280/p:16x9/2014-09-17T145549Z_1102159084_GM1EA9H1RKC01_RTRMADP_3_CHINA-SOUTHASIA-INDIA_0.JPG"><p><strong>印度政府如何能够在开发太阳能资源的同时避免对中国新能源科技的依赖？印度政府近期宣布从4月1日起重启太阳能光伏组件的进口限制，此举是否足以推动“印度制造”产品的发展吗                    </strong></p><div><p>印度将于明天周五启动为时六周的立法选举，印度各地九亿多选民将先后于七个投票日投票，之所以要错开投票时间，是为了便于安保人员守护全国各地的投票站，投票结果将于六月四日公布。选前的民调显示，印度总理莫迪所在的人民党（Bharatiya Janata Party）有望获得第三次胜利，莫迪所面对的最大的对手是以国大党（Indian National Congress）为首的政党联盟。</p><p>这个由20多个政党组成的反对党联盟的名称叫做“印度国家发展包容性联盟”（Indian National Developmental Inclusive Alliance），此次选举的关键议题除了反对党联盟所提出的要避免印度越来越“滑向专制”之外，就是年轻人的就业等经济议题。而在经济议题中，中印合作尤其是在可再生能源领域的合作议题举足轻重，因为这不仅是印度这一碳排放大国能源转型的一大关键性的一步，而且也涉及印度如何处理与他在地缘政治舞台上的一大对手中国之间的双边关系。</p><p>众所周知，早在2015年巴黎气候峰会期间，印度政府就做出了在2030年之前实现500吉瓦的可再生能源的承诺，2018年，43个国家的政府首脑和部长在印度首都新德里出席了国际太阳能联盟的成立大会，该联盟的理念是在共享价值观、经验和资源的基础上为清洁能源创造一个共同的市场。然而，尽管印度的自然日照条件远远领先于其他国家，到2021年年底印度的光伏发电累计装机容量仅为60.4GW，远远低于中国的308吉瓦，位居中国，欧盟，美国以及日本之后。而且，印度的太阳能设备组件主要依赖进口，而且其中超过50%来自中国。</p><p>那么，印度政府如何能够在开发太阳能资源的同时避免对中国新能源科技的依赖？印度政府近期宣布从4月1日起重启太阳能光伏组件的进口限制，此举是否足以推动“印度制造”产品的发展吗？</p><p>就以上问题，法广电话采访了印度新德里尼赫鲁大学国际问题研究院东亚研究中心的主席，汉学家谢钢教授。</p><p>谢刚教授就印度针对来自中国的太阳能部件抬高关税的策略评论说：</p><p>“中国从2021年起向印度出口的硅胶，电池片，接线盒等太阳能部件占印度总进口量的60%至70%，但是，由于地缘政治的影响，印度对中印边界2020年发生的冲突记忆犹新，因此，新德里的决策首先是出于地缘政治方面的考量；其次，我们也看到一些贸易上的风险，尤其是在新冠疫情期间，对印度的进口曾经产生巨大影响，这是印度政府限制太阳能电池板进口的另一大考量。鉴于以上原因，印度期待发展自身的太阳能产业，当然，新产业的开发需要时间，不可能一蹴而就，在此期间，印度对中国的太阳能工业依然十分依赖。此外，另一个原因是中国在2003年对日本实施的稀土禁运，以及美国对中国的芯片封锁等等，这一切都使印度意识到倘若有朝一日，中国也对印度实施太阳能设备禁运，这将对印度全国产生的灾难性的影响，因此，印度政府鼓励印度国内的企业例如阿达尼集团（Adani Solar）等开发自己的新能源产业，阿达尼在印度各地安置了许多太阳能设备，另外，印度的石油能源集团也开始发展产业多元化，投资开发太阳能工厂。在发展本国太阳能产业的同时，印度还着手寻找中国之外的新的太阳能供应国，比如说法国，法国的道达尔集团在南非开设了太阳能电池板生产工厂，因为我们知道，巴黎气候协定制定了一个能源过渡的时间表与融资途径，联合国第26届气候峰会提出了一个协助南非走出煤炭的能源过渡计划，为南非的新能源产业的开发提供了融资，印度期待能够进口更多来自欧洲的产品，以便减低印度对中国设备的依赖，另外，印度计划斥资2000亿美元以推动国内的太阳能产业的发展，以上是印度推出的缓解对中国太阳能产品依赖的一系列措施。”</p><p>非常感谢印度新德里尼赫鲁大学国际问题研究院东亚研究中心的主席，汉学家谢钢教授接受法广的采访。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div>
+<div>17/04/2024 - 23:11</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>周四（4月18号）上市的法国《世界报》有多篇文章与中国有关。两篇占据着国际版的版面的文章分别是《北京关注所罗门群岛的选举》，另一篇为《 在十年的 “猎狐”行动中，中国遣返了数千名 “逃犯”》。地缘政治专栏关注的是乌克兰战争让美国的担心的中俄日益结盟。                    </strong></p><div><p>文章作者Sylvie Kauffmann在文中开头写道，德国总理奥拉夫-肖尔茨（Olaf Scholz）于4月17日（周三）结束访华，以及中国国家主席习近平于5月6日在巴黎接会见埃马纽埃尔-马克龙（Emmanuel Macron）的欧洲之行前，华盛顿向欧洲人传达了一个信息：既然你们与北京保持着高层关系，就利用这种关系向中国施压，使其停止在乌克兰战争中帮助俄罗斯。最近几周，法国外长斯特凡-塞茹尔内（Stéphane Séjourné）在北京、美国访华的领导人以及朔尔茨（Olaf Scholz）都积极转达了这一信息。这反映了美国对乌克兰战争最引人注目的地缘政治影响之一——中俄关系的深化——的担忧。</p><p> 为了让那些依然怀疑的人相信这种深化对战争进程产生了具体影响，并在一定程度上解释俄罗斯经济, 4 月 12 日，华盛顿公布了之前保密的数据：包括，在 2023 年最后一个季度，中国向俄罗斯提供了用于生产弹道导弹的机床进口量的 70%以上。2023年全年，俄罗斯进口的微电子产品中90%来自中国，而微电子产品对导弹和坦克的制造至关重要。</p><p><strong>美国为何突然坚持中国因素？</strong></p><p>尽管受到西方制裁，但俄罗斯工业仍以惊人的速度恢复并大量生产武器，面对因西方供应迟缓而陷入困境的乌克兰军队，这些武器在当地发挥了重要作用。</p><p>克里姆林宫从中国和印度进口的俄罗斯石油中获得了可观的收入，这些国家现在已经弥补了莫斯科失去欧洲市场的损失。但来自中国的物质援助似乎正在发挥着重要作用，即使这种援助没有越过提供致命武器的红线。</p><p>另一种解释是中俄轴心的加强，这是大国间力量平衡演变的主要趋势。对于以中国力量崛起衡量一切的美国来说，这一点不容忽视。众所周知，中俄关系的根本就是共同反对美国统治。</p><p><strong>“俄罗斯正在将自己锁定为中国的附庸”</strong></p><p>俄中关系的缓和并不是全新的，莫斯科早在2014年就转向了中国，当时俄罗斯吞并克里米亚后与西方国家的关系降温，第一波制裁也随之而来，从那时起，中俄之间的贸易大幅增长。但直到 2022 年，欧盟仍是莫斯科的重要经济伙伴，对乌克兰发动大规模战争后，俄罗斯被迫完全转向中国。</p><p>2022 年 2 月 4 日，普京和习近平两国元首在北京冬奥会之际举行会晤，并发表公报宣布 "无限友谊"，这被视为两国关系缓和的重要一步。此时距离普京入侵乌克兰还有三周时间，人们一直在猜测普京是否向习近平警告了他正在策划的攻势。</p><p>但从那时起，他们之间的关系得到了巩固。卡内基智库专家亚历山大-加布耶夫（Alexander Gabuev）在《外交事务》（Foreign Affairs）杂志上写道："俄罗斯维持与西方对抗的唯一途径是将俄罗斯的经济、人才和军事技术融入"中国大同”，即以欧亚大陆为地理中心、由中国主导的秩序。俄罗斯正在将自己锁定为中国的附庸"。</p><p>因此，西方国家中那些主张与普京对话的人所追求的，防止俄罗斯落入中国的轨道并将俄罗斯与欧洲联系在一起的目标不仅没有实现，而且乌克兰战争实际上将俄罗斯投入了中国的怀抱。</p><p>然而，中国政府似乎并没有用爱的眼光来看待这场有些勉强的婚姻。尽管两国领导人频繁接触，且预计普京将于 5 月再次访问北京， 但 "友谊无上限 "的说法并未再被提及，两国也没有结成联盟。</p><p><strong>宗主对附庸并不仁慈</strong></p><p>一些中国学者和专家在中国之外的媒体上对俄罗斯转向亚洲的真实性持保留意见：北京大学的关贵海（音译）认为在普京在乌克兰问题上的固执可以解释为他害怕失去俄罗斯的欧洲身份。他在美国外交关系委员会网站上写道，“如果俄罗斯失去乌克兰，"其与欧洲的联系将大大削弱，其战略空间将远离欧洲中心，俄罗斯将更像一个亚洲国家"。</p><p>中国的另一个保留意见是：中俄两国对世界秩序演变的看法并不一致。学者冯玉军（音译）在《经济学人》上写道："俄罗斯试图通过战争破坏现有的地区和国际秩序，而中国则希望和平解决冲突"，他对普京在乌克兰的军事表现印象深刻，"俄罗斯不可战胜的神话已经破灭"。</p><p>宗主对附庸并不仁慈。面对中俄轴心，美国正在巩固其印太集团，同时呼吁欧洲就乌克兰问题与北京进行 "有力的对话"，条件是欧洲人准备好这样做了。</p><p><strong> 在十年的 “猎狐”行动中，中国遣返了数千名 “逃犯”</strong></p><p>在《世界报》上这篇关注中国“猎狐”计划的文章中， 作者Simon Leplâtre指出，总部设在马德里的非政府组织 "保护捍卫者 "于 4 月 16 日发表了一份报告，回顾了这项于 2015 年更名为 "天网 "运动的十年历程。报告审查了 283 起强制遣返案件，其中四起来自法国。</p><p>虽然有些国家直接或通过国际刑警组织与中国合作，但大多数行动都是在任何法律框架之外进行的。据中国共产党中央纪律检查委员会（CCDI）称，十年来，作为行动的一部分，已有 12,000 人从 120 个国家被强制遣返。这次行动是在习近平主席上任一年多后启动的，紧随大规模反腐运动之后。最初的目标是遣返被称为 "狐狸 "的腐败官员。但这场运动也与中国在国际舞台上的崛起不谋而合，中国政府认为，在崛起的同时应加强对其公民在海外活动的控制。实际上，这些方法也适用于批评中国政权的人，或谴责其家人在中国所受待遇的受害者亲属。</p><p>散居国外的维吾尔族人受到的打击尤为严重。报告重点介绍了土耳其维吾尔族人的情况："中国当局根据收集到的关于生活在土耳其的维吾尔族人的信息，以及他们对留在中国的家人安全的担忧，胁迫或威胁他们停止激进活动，制作有利于中国的宣传品，和/或监视土耳其的其他维吾尔族人"。除这些威胁外，特工还可能提供奖励：包括金钱或探访中国亲属的机会。</p><p>在一些与中国政治关系密切的国家，如斐济，与北京签署了安全协议后，中国特工的行为就像在国内一样。东南亚许多国家也与中国政府合作。近年来，随着 Covid-19 大流行，由中国黑帮组织的网上诈骗活动日益猖獗，尤其是来自缅甸的诈骗活动。</p><p>然而，随着时间的推移，国际社会也做出了反应：例如，在斐济，2022 年底当选的新总理下令修改与中国的合作协议，该国不再欢迎中国官员入境。2022 年，欧洲人权法院做出裁决，宣布波兰对一名台湾公民提起的诉讼无效，这名台湾公民被威胁要引渡到中国，不是因为他的国籍，而是因为中国政权的专制性质。此案开创了先例。报告说："从那时起，情况发生了翻天覆地的变化，欧洲委员会的 46 个成员国系统地拒绝了向中国提出的引渡请求（......）"。最后，在美国，中国和美国公民在多起与企图强制遣返中国有关的案件中被捕并受审。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%89%BE%E7%B1%B3/" title="艾米">艾米</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
