--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-20 [解放军撤销第五军种  新建信息支援部队搞心战？](/articles/rfa/1037271.md)
+
+4-20 [美智库报告：中国海军在柬埔寨云朗基地执行任务](/articles/rfa/1037272.md)
+
 4-20 [六四35周年  何晓清：八九不是结束 只是开始](/articles/rfa/1037273.md)
 
 4-20 [西藏流亡政府领导人对美参院通过西藏议案表“乐观”](/articles/rfa/1037274.md)
@@ -596,8 +600,4 @@
 3-19 [中国著名骨科医生涉腐被查　难以遏制的医疗腐败](/articles/rfa/1037569.md)
 
 3-19 [习近平祝贺普京“连任”   中俄联手引发国际安全担忧](/articles/rfa/1037570.md)
-
-3-19 [中国提升招揽外资力度   外媒：失去信任难回流](/articles/rfa/1037571.md)
-
-3-19 [网民统计：习近平已为中国和世界“指明”近250个方向](/articles/rfa/1037572.md)
 
