--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-20 [《反击中国的大博弈》揭示美国如何赢得新冷战](/articles/voa/1016258.md)
+
+4-20 [中国官媒尚未在以色列-伊朗冲突中选边，但网民已指责美国“火上浇油”](/articles/voa/1016259.md)
+
 4-20 [以色列对伊朗: 挽回颜面，重新起步](/articles/voa/1016260.md)
 
 4-20 [美中贸易矛盾加剧之际，中国对从美国进口的丙酸实施反倾销措施](/articles/voa/1016261.md)
@@ -596,8 +600,4 @@
 4-9 [内塔尼亚胡宣布已确定攻打拉法的日期，美国反对](/articles/voa/1016556.md)
 
 4-9 [处于中印对峙区的拉达克人抗议生存空间备受挤压](/articles/voa/1016557.md)
-
-4-9 [伊朗外长在致命攻击后开启驻叙利亚新领事馆](/articles/voa/1016558.md)
-
-4-9 [中国银行决定英国水务巨头命运，引发国家安全担忧](/articles/voa/1016559.md)
 
