--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-20 [竹不倒｜就算呼声没成功，也应当受保护！](/articles/cdt/341485.md)
+
+4-20 [咸蛋bot｜高丙芳案现审辩冲突：辩护人被强行带出法庭，被告人宣判前突遭逮捕](/articles/cdt/341489.md)
+
 4-20 [冷杉RECORD｜女儿被割喉的340天](/articles/cdt/341499.md)
 
 4-20 [凤凰网｜“核酸大王”，变身自媒体创业导师](/articles/cdt/341502.md)
@@ -596,8 +600,4 @@
 3-17 [沉思的托克维尔｜大明朝没有人才吗？](/articles/cdt/342587.md)
 
 3-17 [每日一语 2024.3.16](/articles/cdt/342591.md)
-
-3-17 [如是之观｜包公祠前的哭声，为何如此引发共鸣](/articles/cdt/342595.md)
-
-3-17 [屠龙乔治｜关于俄罗斯大选的故事](/articles/cdt/342597.md)
 
