--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-20 [林孤小姐｜还是成都更狠啊](/articles/cdt/341483.md)
+
 4-20 [竹不倒｜就算呼声没成功，也应当受保护！](/articles/cdt/341485.md)
 
 4-20 [咸蛋bot｜高丙芳案现审辩冲突：辩护人被强行带出法庭，被告人宣判前突遭逮捕](/articles/cdt/341489.md)
@@ -598,6 +600,4 @@
 3-17 [枫林暖｜热闹的315晚会背后，是消费者的落寞](/articles/cdt/342585.md)
 
 3-17 [沉思的托克维尔｜大明朝没有人才吗？](/articles/cdt/342587.md)
-
-3-17 [每日一语 2024.3.16](/articles/cdt/342591.md)
 
